--- a/r-config-feedstock/recipe/meta.yaml
+++ b/r-config-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.2' %}
+{% set version = '0.3' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,27 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: config_0.2.tar.gz  # [linux or win32]
+  fn: config_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/config_0.2.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/config/config_0.2.tar.gz  # [linux or win32]
-  sha256: 40cc2969cc655214817edc053c9649b9226f4b24368fccca9d2d338833560fdc  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/config_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/config/config_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 5ade6a768db6225634095ac0e71e5710fd1597c15512bac0b45a0b52afb3c750  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/config_0.3.zip  # [win64]
+  sha256: cc7fd6f1575b45ca8043a4f2106ba0b48147f2fcf21e5ff13f75e6611def12e3  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/config_0.2.zip  # [win64]
-  sha256: f00acb0ff57d88710945a709de05faec774e864e47149ce21bb8069df0731b2b  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/config_0.2.tgz  # [osx]
-  sha256: bf773cd3560b36695067028decc573e9bd702d85c692a46d6d9871d07b1c2be7  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/config_0.3.tgz  # [osx]
+  sha256: 9c63598559b6c50fca6c9ada10fc830f6644e6e662ddf4ce208ee09a672eb49a  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -76,7 +71,7 @@ extra:
 # Package: config
 # Type: Package
 # Title: Manage Environment Specific Configuration Values
-# Version: 0.2
+# Version: 0.3
 # Authors@R: c( person("JJ", "Allaire", role = c("aut", "cre"), email = "jj@rstudio.com"), person(family = "RStudio, Inc.", role = "cph"))
 # Imports: yaml (>= 2.1.13)
 # Suggests: testthat, knitr
@@ -84,14 +79,14 @@ extra:
 # License: GPL-3
 # URL: https://github.com/rstudio/config
 # BugReports: https://github.com/rstudio/config/issues
-# RoxygenNote: 5.0.1
+# RoxygenNote: 6.0.1
 # VignetteBuilder: knitr
 # NeedsCompilation: no
-# Packaged: 2016-08-02 13:24:09 UTC; jjallaire
+# Packaged: 2018-03-27 17:50:45 UTC; jjallaire
 # Author: JJ Allaire [aut, cre], RStudio, Inc. [cph]
 # Maintainer: JJ Allaire <jj@rstudio.com>
 # Repository: CRAN
-# Date/Publication: 2016-08-02 16:59:45
+# Date/Publication: 2018-03-27 20:38:53 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
