--- a/r-desc-feedstock/recipe/meta.yaml
+++ b/r-desc-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.1.1' %}
+{% set version = '1.2.0' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,27 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: desc_1.1.1.tar.gz  # [linux or win32]
+  fn: desc_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/desc_1.1.1.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/desc/desc_1.1.1.tar.gz  # [linux or win32]
-  sha256: 32ff99b658db3bf0172cf30d15b7f34021144ffc08a5896afd3d30055fc4074c  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/desc_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/desc/desc_{{ version }}.tar.gz  # [linux or win32]
+  sha256: e66fb5d4fc7974bc558abcdc107a1f258c9177a29dcfcf9164bc6b33dd08dae8  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/desc_1.2.0.zip  # [win64]
+  sha256: 7b1c19f4e44c17bb72e445394ac1758923ac825a7b1bd9d0e97a0d36a3b73798  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/desc_1.1.1.zip  # [win64]
-  sha256: ad8324b327e807a744715bd14a821812ff016fc9a49ac92645d4763b51ece6e9  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/desc_1.1.1.tgz  # [osx]
-  sha256: 3eb03e2cec5737b452c6a2ae50b07aaa1b9a037c39e633ef034e3593ef35e23a  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/desc_1.2.0.tgz  # [osx]
+  sha256: 971851adb5e6e6572f2260023bce65d5fb2fa26901d8eff167f2196d540c4316  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -80,8 +75,8 @@ extra:
 
 # Package: desc
 # Title: Manipulate DESCRIPTION Files
-# Version: 1.1.1
-# Authors@R: c( person("Gabor", "Csardi",, "csardi.gabor@gmail.com", role = c("aut", "cre")), person("Kirill", "Muller", role = c("aut")))
+# Version: 1.2.0
+# Authors@R: c( person("Gabor", "Csardi",, "csardi.gabor@gmail.com", role = c("aut", "cre")), person("Kirill", "Muller", role = c("aut")), person("Jim", "Hester", email = "james.f.hester@gmail.com", role = c("aut")))
 # Maintainer: Gabor Csardi <csardi.gabor@gmail.com>
 # Description: Tools to read, write, create, and manipulate DESCRIPTION files. It is intended for packages that create or manipulate other packages.
 # License: MIT + file LICENSE
@@ -92,13 +87,13 @@ extra:
 # Suggests: covr, testthat, whoami, withr
 # Imports: assertthat, utils, R6, crayon, rprojroot
 # Encoding: UTF-8
-# RoxygenNote: 5.0.1.9000
-# Collate: 'assertions.R' 'authors-at-r.R' 'classes.R' 'collate.R' 'constants.R' 'deps.R' 'description.R' 'encoding.R' 'latex.R' 'non-oo-api.R' 'package-archives.R' 'read.R' 'remotes.R' 'str.R' 'syntax_checks.R' 'urls.R' 'utils.R' 'validate.R' 'version.R'
+# RoxygenNote: 6.0.1.9000
+# Collate: 'assertions.R' 'authors-at-r.R' 'built.R' 'classes.R' 'collate.R' 'constants.R' 'deps.R' 'description.R' 'encoding.R' 'latex.R' 'non-oo-api.R' 'package-archives.R' 'read.R' 'remotes.R' 'str.R' 'syntax_checks.R' 'urls.R' 'utils.R' 'validate.R' 'version.R'
 # NeedsCompilation: no
-# Packaged: 2017-08-03 09:45:28 UTC; gaborcsardi
-# Author: Gabor Csardi [aut, cre], Kirill Muller [aut]
+# Packaged: 2018-05-01 20:22:08 UTC; gaborcsardi
+# Author: Gabor Csardi [aut, cre], Kirill Muller [aut], Jim Hester [aut]
 # Repository: CRAN
-# Date/Publication: 2017-08-03 15:22:33 UTC
+# Date/Publication: 2018-05-01 20:48:05 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
