--- a/r-withr-feedstock/recipe/meta.yaml
+++ b/r-withr-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '2.1.1' %}
+{% set version = '2.1.2' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,27 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: withr_2.1.1.tar.gz  # [linux or win32]
+  fn: withr_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/withr_2.1.1.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/withr/withr_2.1.1.tar.gz  # [linux or win32]
-  sha256: bd5fae3846b8f89081a0991375402266dccf49bfa5d614690deea1b03ba5eb9e  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/withr_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/withr/withr_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 41366f777d8adb83d0bdbac1392a1ab118b36217ca648d3bb9db763aa7ff4686  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/withr_2.1.2.zip  # [win64]
+  sha256: a10de2cf54d50854562696ac1a53bbbe2e7c551dc96bcfbc469471a2dfa30595  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/withr_2.1.1.zip  # [win64]
-  sha256: a2d7ecaeff0e0a5fcf937c6fac52b55569f2ed41fe0a6c4ef70461afa5053be8  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/withr_2.1.1.tgz  # [osx]
-  sha256: e2c4d374676f07e53904a9e7ad4b44acb2ef0417199595f730cdc9b71b0fbeb1  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/withr_2.1.2.tgz  # [osx]
+  sha256: f88b750f7509d571f4ff0750fad58e0841f9a82d6e0e0bbe21f125fb7d2d9087  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -58,7 +53,7 @@ test:
     # Put any additional test requirements here.
 
 about:
-  home: http://github.com/r-lib/withr#readme
+  home: http://withr.r-lib.org, http://github.com/r-lib/withr#readme
   license: GPL (>= 2)
   summary: A set of functions to run code 'with' safely and temporarily modified global state.
     Many of these functions were originally a part of the 'devtools' package, this provides
@@ -74,10 +69,10 @@ extra:
 # Encoding: UTF-8
 # Package: withr
 # Title: Run Code 'With' Temporarily Modified Global State
-# Version: 2.1.1
+# Version: 2.1.2
 # Authors@R: c( person("Jim", "Hester", , "james.f.hester@gmail.com", role = c("aut", "cre")), person("Kirill", "Muller", , "krlmlr+r@mailbox.org", role = "aut"), person("Kevin", "Ushey", email = "kevinushey@gmail.com", role = c("aut")), person("Hadley", "Wickham", , "hadley@rstudio.com", role = "aut"), person("Winston", "Chang", role = "aut"), person("Richard", "Cotton", role = c("ctb")), person("RStudio", role = "cph"))
 # Description: A set of functions to run code 'with' safely and temporarily modified global state. Many of these functions were originally a part of the 'devtools' package, this provides a simple package with limited dependencies to provide access to these functions.
-# URL: http://github.com/r-lib/withr#readme
+# URL: http://withr.r-lib.org, http://github.com/r-lib/withr#readme
 # BugReports: http://github.com/r-lib/withr/issues
 # Depends: R (>= 3.0.2)
 # License: GPL (>= 2)
@@ -88,11 +83,11 @@ extra:
 # Collate: 'local_.R' 'with_.R' 'collate.R' 'connection.R' 'db.R' 'defer.R' 'wrap.R' 'devices.R' 'dir.R' 'env.R' 'file.R' 'libpaths.R' 'locale.R' 'makevars.R' 'namespace.R' 'options.R' 'par.R' 'path.R' 'seed.R' 'sink.R' 'tempfile.R' 'torture.R' 'utils.R' 'with.R'
 # VignetteBuilder: knitr
 # NeedsCompilation: no
-# Packaged: 2017-12-19 17:41:51 UTC; jhester
+# Packaged: 2018-03-15 13:59:37 UTC; jhester
 # Author: Jim Hester [aut, cre], Kirill Muller [aut], Kevin Ushey [aut], Hadley Wickham [aut], Winston Chang [aut], Richard Cotton [ctb], RStudio [cph]
 # Maintainer: Jim Hester <james.f.hester@gmail.com>
 # Repository: CRAN
-# Date/Publication: 2017-12-19 20:22:01 UTC
+# Date/Publication: 2018-03-15 22:39:56 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
