--- a/r-argparse-feedstock/recipe/meta.yaml
+++ b/r-argparse-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.1.0' %}
+{% set version = '1.1.1' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,25 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: argparse_1.1.0.tar.gz  # [linux or win32 or osx]
-  url:  # [linux or win32 or osx]
-    - {{ cran_mirror }}/src/contrib/argparse_1.1.0.tar.gz  # [linux or win32 or osx]
-    - {{ cran_mirror }}/src/contrib/Archive/argparse/argparse_1.1.0.tar.gz  # [linux or win32 or osx]
-  sha256: 2af94483a46ef53728cbbc828f96697d8dc2885738f09d0970e208a616851403  # [linux or win32 or osx]
+  fn: argparse_{{ version }}.tar.gz   # [linux or win32]
+  url:  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/argparse_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/argparse/argparse_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 441449f0816411a868fd1b15cf4b2bc45931bbd4b67d6592dbe48875905cf93b  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/argparse_1.1.1.zip  # [win64]
+  sha256: cdb5d2286bb084aeb726ddb83010856d34258154a3db8b57610500695e1f6cf4  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/argparse_1.1.0.zip  # [win64]
-  sha256: 88f3eec1e3015f60edac56d5adf6371a13306559595c08b6e719ba147982590a  # [win64]
-
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/argparse_1.1.1.tgz  # [osx]
+  sha256: bd118bd9dc5948f0bfa4da03f2f38b5bf5ecadd6fdcb984f59c86500d4275590  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -42,14 +39,14 @@ requirements:
     - r-findpython
     - r-getopt >=1.19
     - r-jsonlite
-    - r-proto
+    - r-proto >=1.0.0
 
   run:
     - mro-base
     - r-findpython
     - r-getopt >=1.19
     - r-jsonlite
-    - r-proto
+    - r-proto >=1.0.0
 
 test:
   commands:
@@ -79,7 +76,7 @@ extra:
 # Package: argparse
 # Type: Package
 # Title: Command Line Optional and Positional Argument Parser
-# Version: 1.1.0
+# Version: 1.1.1
 # Author: Trevor L Davis. Ports examples from the argparse Python module by the Python Software Foundation. Ports examples from the getopt package by Allen Day.
 # Maintainer: Trevor L Davis <trevor.l.davis@gmail.com>
 # Description: A command line parser to be used with Rscript to write "#!" shebang scripts that gracefully accept positional and optional arguments and automatically generate usage.
@@ -88,15 +85,15 @@ extra:
 # URL: https://github.com/trevorld/argparse
 # BugReports: https://github.com/trevorld/argparse/issues
 # LazyLoad: yes
-# Imports: proto, findpython, getopt (>= 1.19), jsonlite
+# Imports: proto (>= 1.0.0), findpython, getopt (>= 1.19), jsonlite
 # SystemRequirements: python (>= 3.2)
 # Suggests: knitr (>= 1.15.19), testthat
 # VignetteBuilder: knitr
 # RoxygenNote: 6.0.1
 # NeedsCompilation: no
-# Packaged: 2017-11-29 23:10:21 UTC; trevorld
+# Packaged: 2018-01-24 18:52:54 UTC; trevorld
 # Repository: CRAN
-# Date/Publication: 2017-11-29 23:20:13 UTC
+# Date/Publication: 2018-01-24 19:16:15 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
