--- a/r-bcp-feedstock/recipe/meta.yaml
+++ b/r-bcp-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '4.0.0' %}
+{% set version = '4.0.1' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,27 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: bcp_4.0.0.tar.gz  # [linux or win32]
+  fn: bcp_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/bcp_4.0.0.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/bcp/bcp_4.0.0.tar.gz  # [linux or win32]
-  sha256: f5b54d26fb09d087cf187dec0bc105a52476bf162b1c5a4a9a9e2929023a6dae  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/bcp_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/bcp/bcp_{{ version }}.tar.gz  # [linux or win32]
+  sha256: eb693aecf9b84d8a663bbe1e2bf3911f0914b5543dbbbe4aa198ffa9a77d87b3  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-04-23/bin/windows/contrib/3.5/bcp_4.0.1.zip  # [win64]
+  sha256: 49a496afa297de11ace626433d0c94d3347fe9bfb2e9dd0fb922014eafb5d24b  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/bcp_4.0.0.zip  # [win64]
-  sha256: f802b284c12c7930e0e6a412250770cf97014d14f05dc30c17d6bb4a6eea9132  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/bcp_4.0.0.tgz  # [osx]
-  sha256: 95084255430198035f1c5df2fa6bd3de0c1eddb5d7fff0418ec7cec7eca19a0d  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-04-23/bin/macosx/el-capitan/contrib/3.5/bcp_4.0.1.tgz  # [osx]
+  sha256: 4afe949c41d6432cec770d0ee0a1ea639c0a5cb723bb637b4c7374111aaac6aa  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -38,12 +33,11 @@ build:
 # Suggests: DNAcopy, coda, strucchange, vegan, ggplot2, igraph
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{ compiler('cxx') }}        # [linux]
-    - {{ compiler('fortran') }}    # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}make                # [linux or win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{ compiler('cxx') }}      # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
@@ -52,7 +46,7 @@ requirements:
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
+    - {{native}}gcc-libs         # [win32]
     - r-rcpp >=0.9.2
     - r-rcpparmadillo
 
@@ -72,7 +66,7 @@ about:
   home: https://CRAN.R-project.org/package=bcp
   license: GPL (>= 2)
   summary: Provides an implementation of the Barry and Hartigan (1993) product partition model
-    for the normal errors change point problem using Markov Chain Monte Carlo.  It also
+    for the normal errors change point problem using Markov Chain Monte Carlo. It also
     extends the methodology to regression models on a connected graph (Wang and Emerson,
     2015); this allows estimation of change point models with multivariate responses.
     Parallel MCMC, previously available in bcp v.3.0.0, is currently not implemented.
@@ -87,20 +81,21 @@ extra:
 # Package: bcp
 # Type: Package
 # Title: Bayesian Analysis of Change Point Problems
-# Version: 4.0.0
-# Date: 2015-07-14
+# Version: 4.0.1
+# Date: 2018-04-07
 # Author: Xiaofei Wang, Chandra Erdman, and John W. Emerson
-# Maintainer: John W. Emerson <john.emerson@yale.edu>
+# Maintainer: Xiaofei Wang <xiaofei.wang@yale.edu>
 # Depends: graphics, methods, grid
 # Suggests: DNAcopy, coda, strucchange, vegan, ggplot2, igraph
-# Description: Provides an implementation of the Barry and Hartigan (1993) product partition model for the normal errors change point problem using Markov Chain Monte Carlo.  It also extends the methodology to regression models on a connected graph (Wang and Emerson, 2015); this allows estimation of change point models with multivariate responses. Parallel MCMC, previously available in bcp v.3.0.0, is currently not implemented.
+# Description: Provides an implementation of the Barry and Hartigan (1993) product partition model for the normal errors change point problem using Markov Chain Monte Carlo. It also extends the methodology to regression models on a connected graph (Wang and Emerson, 2015); this allows estimation of change point models with multivariate responses. Parallel MCMC, previously available in bcp v.3.0.0, is currently not implemented.
 # License: GPL (>= 2)
 # Imports: Rcpp (>= 0.9.2)
 # LinkingTo: Rcpp, RcppArmadillo
 # NeedsCompilation: yes
-# Packaged: 2015-07-14 23:29:06 UTC; jay
 # Repository: CRAN
-# Date/Publication: 2015-07-15 13:23:42
+# RoxygenNote: 6.0.1
+# Packaged: 2018-04-07 20:48:07 UTC; eastie
+# Date/Publication: 2018-04-11 07:05:27 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
