--- a/r-bindrcpp-feedstock/recipe/meta.yaml
+++ b/r-bindrcpp-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.2' %}
+{% set version = '0.2.2' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,27 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: bindrcpp_0.2.tar.gz  # [linux or win32]
+  fn: bindrcpp_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/bindrcpp_0.2.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/bindrcpp/bindrcpp_0.2.tar.gz  # [linux or win32]
-  sha256: d0efa1313cb8148880f7902a4267de1dcedae916f28d9a0ef5911f44bf103450  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/bindrcpp_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/bindrcpp/bindrcpp_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 48130709eba9d133679a0e959e49a7b14acbce4f47c1e15c4ab46bd9e48ae467  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/bindrcpp_0.2.2.zip  # [win64]
+  sha256: a359bbe1c5ba39134cabdfaddd3ea0354fa96bd14e717b175b777da76073e0ba  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/bindrcpp_0.2.zip  # [win64]
-  sha256: 403989e8fdf5a2b2b73b5bdfc091280a1ca7b7c00c2cb61919b6babee42cd288  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/bindrcpp_0.2.tgz  # [osx]
-  sha256: a7c9ac1aadf90c3668862b1b44cc2ee89549f49164b7c75d5b1a741dcd904898  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/bindrcpp_0.2.2.tgz  # [osx]
+  sha256: e917e1ad38974c887bfd3e3b894a3f8c31af65ed54f22f8a2cc9b9fa8829c20f  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -38,23 +33,23 @@ build:
 # Suggests: testthat
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{ compiler('cxx') }}        # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}make                # [linux or win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{ compiler('cxx') }}      # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
-    - r-rcpp
-    - r-bindr
+    - r-rcpp >=0.12.16
+    - r-bindr >=0.1.1
     - r-plogr
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
-    - r-rcpp
-    - r-bindr
+    - {{native}}gcc-libs         # [win32]
+    - r-rcpp >=0.12.16
+    - r-bindr >=0.1.1
     - r-plogr
 
 test:
@@ -83,25 +78,25 @@ extra:
 
 # Package: bindrcpp
 # Title: An 'Rcpp' Interface to Active Bindings
+# Version: 0.2.2
+# Date: 2018-03-29
+# Authors@R: c( person("Kirill", "M\u00fcller", role = c("aut", "cre"), email = "krlmlr+r@mailbox.org", comment = c(ORCID = "0000-0002-1416-3412")), person("RStudio", role = "cph") )
 # Description: Provides an easy way to fill an environment with active bindings that call a C++ function.
-# Authors@R: c( person("Kirill", "Muller", role = c("aut", "cre"), email = "krlmlr+r@mailbox.org"), person("RStudio", role = "cph") )
-# Version: 0.2
-# Date: 2017-06-15
+# License: MIT + file LICENSE
 # URL: https://github.com/krlmlr/bindrcpp, https://krlmlr.github.io/bindrcpp
 # BugReports: https://github.com/krlmlr/bindrcpp/issues
-# Imports: Rcpp, bindr
+# Imports: bindr (>= 0.1.1), Rcpp (>= 0.12.16)
 # Suggests: testthat
-# LinkingTo: Rcpp, plogr
-# RoxygenNote: 6.0.1
-# LazyData: true
-# License: MIT + file LICENSE
+# LinkingTo: plogr, Rcpp
 # Encoding: UTF-8
+# LazyData: true
+# RoxygenNote: 6.0.1.9000
 # NeedsCompilation: yes
-# Packaged: 2017-06-15 20:53:22 UTC; muelleki
-# Author: Kirill Muller [aut, cre], RStudio [cph]
+# Packaged: 2018-03-29 13:33:00 UTC; muelleki
+# Author: Kirill Muller [aut, cre] (<https://orcid.org/0000-0002-1416-3412>), RStudio [cph]
 # Maintainer: Kirill Muller <krlmlr+r@mailbox.org>
 # Repository: CRAN
-# Date/Publication: 2017-06-17 23:52:40 UTC
+# Date/Publication: 2018-03-29 14:09:09 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
