--- a/r-blob-feedstock/recipe/meta.yaml
+++ b/r-blob-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.1.0' %}
+{% set version = '1.1.1' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,44 +8,39 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: blob_1.1.0.tar.gz  # [linux or win32]
+  fn: blob_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/blob_1.1.0.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/blob/blob_1.1.0.tar.gz  # [linux or win32]
-  sha256: 16d6603df3ddba177f0ac4d9469c938f89131c4bf8834345db838defd9ffea16  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/blob_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/blob/blob_{{ version }}.tar.gz  # [linux or win32]
+  sha256: accbf9c9746c983e4108c8709995e54e61611ea7e2c51d4b6a0d813261484f53  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/blob_1.1.1.zip  # [win64]
+  sha256: b0911100bd33ffb64d91daff9b5105859e30b51c4c10e96f47f15961b5198297  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/blob_1.1.0.zip  # [win64]
-  sha256: ee2eaab872036ffc0bf7677c06a63deef227015c758a62e487164b4dd2f18ef3  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/blob_1.1.0.tgz  # [osx]
-  sha256: d2a64ad17e2012483de3b725f41d8071111d8b24e1e68c11dcfe4f37db573c7a  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/blob_1.1.1.tgz  # [osx]
+  sha256: ee11e0ba18546ae7c06a38d85c23d71bf8aaba5ebe4d3d926ab7333d0c66643a  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: testthat, covr
+# Suggests: covr, pillar (>= 1.2.1), testthat
 requirements:
   build:
 
   host:
     - mro-base
-    - r-tibble
+    - r-prettyunits
 
   run:
     - mro-base
-    - r-tibble
+    - r-prettyunits
 
 test:
   commands:
@@ -60,11 +55,11 @@ test:
     # Put any additional test requirements here.
 
 about:
-  home: https://github.com/hadley/blob
+  home: https://github.com/tidyverse/blob
   license: GPL-3
   summary: R's raw vector is useful for storing a single binary object. What if you want to put
-    a vector of them in a data frame? The blob package provides the blob object, a list
-    of raw vectors, suitable for use as a column in data frame.
+    a vector of them in a data frame? The 'blob' package provides the blob object, a
+    list of raw vectors, suitable for use as a column in data frame.
   license_family: GPL3
 
 extra:
@@ -75,23 +70,23 @@ extra:
 
 # Package: blob
 # Title: A Simple S3 Class for Representing Vectors of Binary Data ('BLOBS')
-# Version: 1.1.0
+# Version: 1.1.1
 # Authors@R: c( person("Hadley", "Wickham", role = c("aut")), person("Kirill", "Muller", , "krlmlr+r@mailbox.org", role = c("cre")), person("RStudio", role = "cph") )
-# Description: R's raw vector is useful for storing a single binary object. What if you want to put a vector of them in a data frame? The blob package provides the blob object, a list of raw vectors, suitable for use as a column in data frame.
-# Imports: tibble
+# Description: R's raw vector is useful for storing a single binary object. What if you want to put a vector of them in a data frame? The 'blob' package provides the blob object, a list of raw vectors, suitable for use as a column in data frame.
 # License: GPL-3
+# URL: https://github.com/tidyverse/blob
+# BugReports: https://github.com/tidyverse/blob/issues
+# Imports: methods, prettyunits
+# Suggests: covr, pillar (>= 1.2.1), testthat
 # Encoding: UTF-8
 # LazyData: true
-# URL: https://github.com/hadley/blob
-# BugReports: https://github.com/hadley/blob/issues
-# Suggests: testthat, covr
-# RoxygenNote: 6.0.1
+# RoxygenNote: 6.0.1.9000
 # NeedsCompilation: no
-# Packaged: 2017-06-17 04:01:59 UTC; muelleki
+# Packaged: 2018-03-24 09:35:46 UTC; muelleki
 # Author: Hadley Wickham [aut], Kirill Muller [cre], RStudio [cph]
 # Maintainer: Kirill Muller <krlmlr+r@mailbox.org>
 # Repository: CRAN
-# Date/Publication: 2017-06-17 14:57:46 UTC
+# Date/Publication: 2018-03-25 15:30:26 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
