--- a/r-commonmark-feedstock/recipe/meta.yaml
+++ b/r-commonmark-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.4' %}
+{% set version = '1.5' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,27 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: commonmark_1.4.tar.gz  # [linux or win32]
+  fn: commonmark_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/commonmark_1.4.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/commonmark/commonmark_1.4.tar.gz  # [linux or win32]
-  sha256: 865ecf9432763393ca9de52d0106a58c4be9e8d5196da60e068eed0b67ca68ed  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/commonmark_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/commonmark/commonmark_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 7fa81635bf0d26395fdd8dd830e16f9910a388faa949b2874aed7a505f2e9dcb  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/commonmark_1.5.zip  # [win64]
+  sha256: c7bbfe5fd2626f447c341a6a4cb1222ca3ba1487f3beb70f4885d0352b2d5b78  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/commonmark_1.4.zip  # [win64]
-  sha256: 92b08fc793a906ef211b5f09b6ee3626d408ead2b0f396a4e636c5e8de77eb14  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/commonmark_1.4.tgz  # [osx]
-  sha256: 4f52758f6fcfface987b62ca61c5103ccd99eb91663163dc25f840a4539311c3  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/commonmark_1.5.tgz  # [osx]
+  sha256: 17e8e325a14e862128bc74afc064d77dbd33d8bfeb4a0af8811c26d07d1bbbf0  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -38,17 +33,17 @@ build:
 # Suggests: curl
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}make                # [linux or win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
+    - {{native}}gcc-libs         # [win32]
 
 test:
   commands:
@@ -81,7 +76,7 @@ extra:
 # Package: commonmark
 # Type: Package
 # Title: High Performance CommonMark and Github Markdown Rendering in R
-# Version: 1.4
+# Version: 1.5
 # Authors@R: c( person("Jeroen", "Ooms", ,"jeroen@berkeley.edu", role = c("aut", "cre")), person("John MacFarlane", role = "cph", comment = "Author of cmark") )
 # URL: http://github.com/jeroen/commonmark (devel) https://github.github.com/gfm/ (spec)
 # BugReports: http://github.com/jeroen/commonmark/issues
@@ -90,11 +85,11 @@ extra:
 # Suggests: curl
 # RoxygenNote: 6.0.1
 # NeedsCompilation: yes
-# Packaged: 2017-08-31 21:37:58 UTC; jeroen
+# Packaged: 2018-04-27 23:59:33 UTC; jeroen
 # Author: Jeroen Ooms [aut, cre], John MacFarlane [cph] (Author of cmark)
 # Maintainer: Jeroen Ooms <jeroen@berkeley.edu>
 # Repository: CRAN
-# Date/Publication: 2017-09-01 09:47:38 UTC
+# Date/Publication: 2018-04-28 06:07:04 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
