--- a/r-ctv-feedstock/recipe/meta.yaml
+++ b/r-ctv-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.8-3' %}
+{% set version = '0.8-5' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,27 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: ctv_0.8-3.tar.gz  # [linux or win32]
+  fn: ctv_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/ctv_0.8-3.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/ctv/ctv_0.8-3.tar.gz  # [linux or win32]
-  sha256: 16f377a6f15d43a6ca8b3933a60faf63b69d0966f011032862b55df5be2f03af  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/ctv_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/ctv/ctv_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 3714ea29f29bad0ffa1195d20c6363c53d092335be17067012f5c9b51afa864e  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/ctv_0.8-5.zip  # [win64]
+  sha256: 3e4e00848826af9f7c715a619fb0c74aee17a1eaf92502b13ad9bae8a7466293  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/ctv_0.8-3.zip  # [win64]
-  sha256: f355c183d9e7ca5f2dd1ea8647be645dc36c365d6ac4af80d17ac8ab2b38f24d  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/ctv_0.8-3.tgz  # [osx]
-  sha256: f99e74500e130b9a8094c06128326214c1150b561250a92f598a032155acd513  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/ctv_0.8-5.tgz  # [osx]
+  sha256: 4cafa00290c9b4389ae67cd045a27c058a04142398d0abbe73e2751dda505d8a  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -73,20 +68,20 @@ extra:
 # The original CRAN metadata for this package was:
 
 # Package: ctv
-# Version: 0.8-3
-# Date: 2017-10-07
+# Version: 0.8-5
+# Date: 2018-05-17
 # Title: CRAN Task Views
-# Authors@R: c(person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org", comment = c(ORCID = "0000-0003-0918-3766")), person(given = "Kurt", family = "Hornik", role = "aut", email = "Kurt.Hornik@R-project.org"))
+# Authors@R: c(person(given = "Achim", family = "Zeileis", role = c("aut", "cre"), email = "Achim.Zeileis@R-project.org", comment = c(ORCID = "0000-0003-0918-3766")), person(given = "Kurt", family = "Hornik", role = "aut", email = "Kurt.Hornik@R-project.org", comment = c(ORCID = "0000-0003-4198-9911")))
 # Description: Infrastructure for task views to CRAN-style repositories: Querying task views and installing the associated packages (client-side tools), generating HTML pages and storing task view information in the repository (server-side tools).
 # Depends: R (>= 2.13.0), utils
 # Suggests: XML
 # License: GPL-2 | GPL-3
 # NeedsCompilation: no
-# Packaged: 2017-10-08 07:47:14 UTC; hornik
-# Author: Achim Zeileis [aut, cre] (<https://orcid.org/0000-0003-0918-3766>), Kurt Hornik [aut]
+# Packaged: 2018-05-17 05:40:02 UTC; zeileis
+# Author: Achim Zeileis [aut, cre] (<https://orcid.org/0000-0003-0918-3766>), Kurt Hornik [aut] (<https://orcid.org/0000-0003-4198-9911>)
 # Maintainer: Achim Zeileis <Achim.Zeileis@R-project.org>
 # Repository: CRAN
-# Date/Publication: 2017-10-08 09:50:54
+# Date/Publication: 2018-05-17 06:03:43 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
