--- a/r-cvst-feedstock/recipe/meta.yaml
+++ b/r-cvst-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.2-1' %}
+{% set version = '0.2-2' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,33 +8,27 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: CVST_0.2-1.tar.gz  # [linux or win32]
+  fn: CVST_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/CVST_0.2-1.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/CVST/CVST_0.2-1.tar.gz  # [linux or win32]
-  sha256: a27fd2bfa778fce9b9a68d2b9206c66af27b3c36a973dd45ce673886a267aa9f  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/CVST_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/CVST/CVST_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 854b8c983427ecf9f2f7798c4fd1c1d06762b5b0bcb1045502baadece6f78316  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/CVST_0.2-2.zip  # [win64]
+  sha256: 0518c095f3cbf634cca9f0ace5d03f1191bb80ad916adb7605856617f991ad02  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/CVST_0.2-1.zip  # [win64]
-  sha256: 0d42835885a98a431f0c521c42926d8943ab6df952c1b4c3d105b2b271410312  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/CVST_0.2-1.tgz  # [osx]
-  sha256: b0570916691b877e7821bc72dfc73639d5a35460b6eceb65224a7e2de9c31967  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/CVST_0.2-2.tgz  # [osx]
+  sha256: d38532f0d0ae23c8f313398eb76902a1bed181eec714244ae5074449f2ab67e5  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
-
 
 requirements:
   build:
@@ -64,17 +58,16 @@ test:
 about:
   home: https://CRAN.R-project.org/package=CVST
   license: GPL (>= 2.0)
-  summary: This package implements the fast cross-validation via sequential testing (CVST) procedure.
-    CVST is an improved cross-validation procedure which uses non-parametric testing
-    coupled with sequential analysis to determine the best parameter set on linearly
-    increasing subsets of the data. By eliminating underperforming candidates quickly
-    and keeping promising candidates as long as possible, the method speeds up the computation
-    while preserving the capability of a full cross-validation. Additionally to the
-    CVST the package contains an implementation of the ordinary k-fold cross-validation
-    with a flexible and powerful set of helper objects and methods to handle the overall
-    model selection process. The implementations of the Cochran's Q test with permutations
-    and the sequential testing framework of Wald are generic and can therefore also
-    be used in other contexts.
+  summary: The fast cross-validation via sequential testing (CVST) procedure is an improved cross-validation
+    procedure which uses non-parametric testing coupled with sequential analysis to
+    determine the best parameter set on linearly increasing subsets of the data. By
+    eliminating under-performing candidates quickly and keeping promising candidates
+    as long as possible, the method speeds up the computation while preserving the capability
+    of a full cross-validation. Additionally to the CVST the package contains an implementation
+    of the ordinary k-fold cross-validation with a flexible and powerful set of helper
+    objects and methods to handle the overall model selection process. The implementations
+    of the Cochran's Q test with permutations and the sequential testing framework of
+    Wald are generic and can therefore also be used in other contexts.
   license_family: GPL3
 
 extra:
@@ -86,17 +79,17 @@ extra:
 # Package: CVST
 # Type: Package
 # Title: Fast Cross-Validation via Sequential Testing
-# Version: 0.2-1
-# Date: 2013-12-10
+# Version: 0.2-2
+# Date: 2018-05-26
 # Depends: kernlab,Matrix
 # Author: Tammo Krueger, Mikio Braun
 # Maintainer: Tammo Krueger <tammokrueger@googlemail.com>
-# Description: This package implements the fast cross-validation via sequential testing (CVST) procedure. CVST is an improved cross-validation procedure which uses non-parametric testing coupled with sequential analysis to determine the best parameter set on linearly increasing subsets of the data. By eliminating underperforming candidates quickly and keeping promising candidates as long as possible, the method speeds up the computation while preserving the capability of a full cross-validation. Additionally to the CVST the package contains an implementation of the ordinary k-fold cross-validation with a flexible and powerful set of helper objects and methods to handle the overall model selection process. The implementations of the Cochran's Q test with permutations and the sequential testing framework of Wald are generic and can therefore also be used in other contexts.
+# Description: The fast cross-validation via sequential testing (CVST) procedure is an improved cross-validation procedure which uses non-parametric testing coupled with sequential analysis to determine the best parameter set on linearly increasing subsets of the data. By eliminating under-performing candidates quickly and keeping promising candidates as long as possible, the method speeds up the computation while preserving the capability of a full cross-validation. Additionally to the CVST the package contains an implementation of the ordinary k-fold cross-validation with a flexible and powerful set of helper objects and methods to handle the overall model selection process. The implementations of the Cochran's Q test with permutations and the sequential testing framework of Wald are generic and can therefore also be used in other contexts.
 # License: GPL (>= 2.0)
-# Packaged: 2013-12-10 13:06:36 UTC; tammok
 # NeedsCompilation: no
+# Packaged: 2018-05-26 15:38:02 UTC; tammok
 # Repository: CRAN
-# Date/Publication: 2013-12-10 14:50:04
+# Date/Publication: 2018-05-26 22:01:57 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
