--- a/r-data.table-feedstock/recipe/meta.yaml
+++ b/r-data.table-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.10.4-3' %}
+{% set version = '1.11.4' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,47 +8,42 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: data.table_1.10.4-3.tar.gz  # [linux or win32]
+  fn: data.table_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/data.table_1.10.4-3.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/data.table/data.table_1.10.4-3.tar.gz  # [linux or win32]
-  sha256: ba8b4f1b96b16e7f9765fc49c5028f21ef2210fc46cf962f4f7ea7901f9d8a89  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/data.table_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/data.table/data.table_{{ version }}.tar.gz  # [linux or win32]
+  sha256: fdccf1dec3f38bb344163163decf3ffa0c0f8e2c70daa1bec8aac422716e81d5  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/data.table_1.11.4.zip  # [win64]
+  sha256: bf0694eec1d8e00b41d7d839357eba813d1bb5a8e81c0dfeab7da4ef64ba1e15  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/data.table_1.10.4-3.zip  # [win64]
-  sha256: 1d2a27e3f1f52ccf5de063cf74c24bf4f718437bb0ec199450c6e006c68d39fd  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/data.table_1.10.4-3.tgz  # [osx]
-  sha256: 289e72a65df2b03559bc859a42c36e87a865c4ef38a9ead9c1b60aa08036294a  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/data.table_1.11.4.tgz  # [osx]
+  sha256: a81d3b47452518bb430ea89c99f3845a63e36a0b2e839429c9d39c4f25a1e6f1  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: bit64, knitr, nanotime, chron, ggplot2 (>= 0.9.0), plyr, reshape, reshape2, testthat (>= 0.4), hexbin, fastmatch, nlme, xts, gdata, GenomicRanges, caret, curl, zoo, plm, rmarkdown, parallel
+# Suggests: bit64, curl, knitr, xts, nanotime, zoo, reshape2
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}make                # [linux or win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
+    - {{native}}gcc-libs         # [win32]
 
 test:
   commands:
@@ -64,11 +59,11 @@ test:
 
 about:
   home: http://r-datatable.com
-  license: GPL-3 | file LICENSE
+  license: MPL-2.0 | file LICENSE
   summary: Fast aggregation of large data (e.g. 100GB in RAM), fast ordered joins, fast add/modify/delete
-    of columns by group using no copies at all, list columns, a fast friendly file reader
-    and parallel file writer. Offers a natural and flexible syntax, for faster development.
-  license_family: GPL3
+    of columns by group using no copies at all, list columns, friendly and fast character-separated-value
+    read/write. Offers a natural and flexible syntax, for faster development.
+  license_family: OTHER
 
 extra:
   recipe-maintainers:
@@ -77,25 +72,24 @@ extra:
 # The original CRAN metadata for this package was:
 
 # Package: data.table
-# Version: 1.10.4-3
+# Version: 1.11.4
 # Title: Extension of `data.frame`
-# Authors@R: c( person("Matt","Dowle",      role=c("aut","cre"), email="mattjdowle@gmail.com"), person("Arun","Srinivasan", role="aut", email="arunkumar.sriniv@gmail.com"), person("Jan","Gorecki",     role="ctb"), person("Tom","Short",       role="ctb"), person("Steve","Lianoglou", role="ctb"), person("Eduard","Antonyan", role="ctb") )
-# Depends: R (>= 3.0.0)
+# Authors@R: c( person("Matt","Dowle",      role=c("aut","cre"), email="mattjdowle@gmail.com"), person("Arun","Srinivasan", role="aut", email="arunkumar.sriniv@gmail.com"), person("Jan","Gorecki",     role="ctb"), person("Michael","Chirico", role="ctb"), person("Pasha","Stetsenko", role="ctb"), person("Tom","Short",       role="ctb"), person("Steve","Lianoglou", role="ctb"), person("Eduard","Antonyan", role="ctb"), person("Markus","Bonsch",   role="ctb"), person("Hugh","Parsonage",  role="ctb"))
+# Depends: R (>= 3.1.0)
 # Imports: methods
-# Suggests: bit64, knitr, nanotime, chron, ggplot2 (>= 0.9.0), plyr, reshape, reshape2, testthat (>= 0.4), hexbin, fastmatch, nlme, xts, gdata, GenomicRanges, caret, curl, zoo, plm, rmarkdown, parallel
-# Description: Fast aggregation of large data (e.g. 100GB in RAM), fast ordered joins, fast add/modify/delete of columns by group using no copies at all, list columns, a fast friendly file reader and parallel file writer. Offers a natural and flexible syntax, for faster development.
-# License: GPL-3 | file LICENSE
+# Suggests: bit64, curl, knitr, xts, nanotime, zoo, reshape2
+# Description: Fast aggregation of large data (e.g. 100GB in RAM), fast ordered joins, fast add/modify/delete of columns by group using no copies at all, list columns, friendly and fast character-separated-value read/write. Offers a natural and flexible syntax, for faster development.
+# License: MPL-2.0 | file LICENSE
 # URL: http://r-datatable.com
 # BugReports: https://github.com/Rdatatable/data.table/issues
-# MailingList: datatable-help@lists.r-forge.r-project.org
 # VignetteBuilder: knitr
 # ByteCompile: TRUE
 # NeedsCompilation: yes
-# Packaged: 2017-10-19 21:11:19.239 UTC; mdowle
-# Author: Matt Dowle [aut, cre], Arun Srinivasan [aut], Jan Gorecki [ctb], Tom Short [ctb], Steve Lianoglou [ctb], Eduard Antonyan [ctb]
+# Packaged: 2018-05-27 00:01:00.467 UTC; mdowle
+# Author: Matt Dowle [aut, cre], Arun Srinivasan [aut], Jan Gorecki [ctb], Michael Chirico [ctb], Pasha Stetsenko [ctb], Tom Short [ctb], Steve Lianoglou [ctb], Eduard Antonyan [ctb], Markus Bonsch [ctb], Hugh Parsonage [ctb]
 # Maintainer: Matt Dowle <mattjdowle@gmail.com>
 # Repository: CRAN
-# Date/Publication: 2017-10-27 07:40:34 UTC
+# Date/Publication: 2018-05-27 16:34:37 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
