--- a/r-drr-feedstock/recipe/meta.yaml
+++ b/r-drr-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.0.2' %}
+{% set version = '0.0.3' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,34 +8,29 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: DRR_0.0.2.tar.gz  # [linux or win32]
+  fn: DRR_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/DRR_0.0.2.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/DRR/DRR_0.0.2.tar.gz  # [linux or win32]
-  sha256: 02860f05f97a6020012fb6ebfe0d7738dd9e9db0555326f1ef57199fcde58ee9  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/DRR_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/DRR/DRR_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 7493389c1fb9ddc4d4261e15bf2d4198603227275688b1d3e3994d47e976a1f9  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/DRR_0.0.3.zip  # [win64]
+  sha256: f2fb43058aac7d28b92872caf829acf1c2399b727c6829962bec0de87f03373b  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/DRR_0.0.2.zip  # [win64]
-  sha256: 246c5d28e38a7857c48aa8bc30e9664249e614fe7643bcdf556436a68e53ef18  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/DRR_0.0.2.tgz  # [osx]
-  sha256: 9f707321d7570376f5deb618fbc670022046ae645713d5bc5fe261e6af298e03  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/DRR_0.0.3.tgz  # [osx]
+  sha256: cea693c89134abf8967edc0749e883ac6debab4cd219863bce5ab02ccb07d14f  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: knitr
+# Suggests: knitr, rmarkdown
 requirements:
   build:
 
@@ -64,8 +59,8 @@ test:
     # Put any additional test requirements here.
 
 about:
-  home: https://CRAN.R-project.org/package=DRR
-  license: GPL-3
+  home: https://github.com/gdkrmr/DRR
+  license: GPL-3 | file LICENSE
   summary: An Implementation of Dimensionality Reduction via Regression using Kernel Ridge Regression.
   license_family: GPL3
 
@@ -77,22 +72,24 @@ extra:
 
 # Package: DRR
 # Title: Dimensionality Reduction via Regression
-# Version: 0.0.2
+# Version: 0.0.3
 # Authors@R: person("Guido", "Kraemer", email = "gkraemer@bgc-jena.mpg.de", role = c("aut","cre"))
 # Description: An Implementation of Dimensionality Reduction via Regression using Kernel Ridge Regression.
-# License: GPL-3
+# License: GPL-3 | file LICENSE
+# URL: https://github.com/gdkrmr/DRR
+# BugReports: https://github.com/gdkrmr/DRR/issues
 # Imports: stats, methods
-# Suggests: knitr
+# Suggests: knitr, rmarkdown
 # VignetteBuilder: knitr
 # LazyData: true
 # Depends: kernlab, CVST, Matrix
-# RoxygenNote: 5.0.1
+# RoxygenNote: 6.0.1
 # NeedsCompilation: no
-# Packaged: 2016-09-15 09:54:12 UTC; gkraemer
+# Packaged: 2018-01-05 21:52:34 UTC; gkraemer
 # Author: Guido Kraemer [aut, cre]
 # Maintainer: Guido Kraemer <gkraemer@bgc-jena.mpg.de>
 # Repository: CRAN
-# Date/Publication: 2016-09-15 15:46:27
+# Date/Publication: 2018-01-06 22:34:19 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
