--- a/r-estimability-feedstock/recipe/meta.yaml
+++ b/r-estimability-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.2' %}
+{% set version = '1.3' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,33 +8,27 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: estimability_1.2.tar.gz  # [linux or win32]
+  fn: estimability_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/estimability_1.2.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/estimability/estimability_1.2.tar.gz  # [linux or win32]
-  sha256: 30a5b0abae9525209531fe8dea44750f6b296948d35ebbe55759e565ef02688d  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/estimability_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/estimability/estimability_{{ version }}.tar.gz  # [linux or win32]
+  sha256: a33179c5fbd6a1a623d90cb6f1743148f92c09429fac466867f3ea70946a2e32  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/estimability_1.3.zip  # [win64]
+  sha256: a2a06725a31d0ee9bb31e5114e191557f4481d988cc04e8c940d80b7861a8c9f  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/estimability_1.2.zip  # [win64]
-  sha256: 61311ef8445e0033ec425235b23608ef12c7ff2688cd29df16cd8ac8aa937a5d  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/estimability_1.2.tgz  # [osx]
-  sha256: d303eef1ed02a6b9d0decdeaeb2492ff4b7b8bc6e12d24480a912dc48e57a502  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/estimability_1.3.tgz  # [osx]
+  sha256: 311f2f1c2b810523f46bee8583594c1f5e24c17cd9faf43515c1124299d5d0bf  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
-
 
 requirements:
   build:
@@ -60,8 +54,10 @@ test:
 about:
   home: https://CRAN.R-project.org/package=estimability
   license: GPL (>= 3)
-  summary: Provides tools for determining estimability of linear functions of regression coefficients,  and
-    'epredict' methods that handle non-estimable cases correctly.
+  summary: Provides tools for determining estimability of linear functions  of regression coefficients,
+    and 'epredict' methods that handle  non-estimable cases correctly. Estimability
+    theory is discussed in many linear-models textbooks including Chapter 3 of Monahan,
+    JF (2008),  "A Primer on Linear Models", Chapman and Hall (ISBN 978-1-4200-6201-4).
   license_family: GPL3
 
 extra:
@@ -73,20 +69,20 @@ extra:
 # Package: estimability
 # Type: Package
 # Title: Tools for Assessing Estimability of Linear Predictions
-# Version: 1.2
-# Date: 2016-11-16
+# Version: 1.3
+# Date: 2018-02-10
 # Authors@R: c(person("Russell", "Lenth", role = c("aut", "cre", "cph"),  email = "russell-lenth@uiowa.edu"))
 # Depends: stats
-# Description: Provides tools for determining estimability of linear functions of regression coefficients,  and 'epredict' methods that handle non-estimable cases correctly.
+# Description: Provides tools for determining estimability of linear functions  of regression coefficients, and 'epredict' methods that handle  non-estimable cases correctly. Estimability theory is discussed in many linear-models textbooks including Chapter 3 of Monahan, JF (2008),  "A Primer on Linear Models", Chapman and Hall (ISBN 978-1-4200-6201-4).
 # LazyData: yes
 # ByteCompile: yes
 # License: GPL (>= 3)
 # NeedsCompilation: no
-# Packaged: 2016-11-19 01:48:37 UTC; rlenth
+# Packaged: 2018-02-11 18:23:39 UTC; rlenth
 # Author: Russell Lenth [aut, cre, cph]
 # Maintainer: Russell Lenth <russell-lenth@uiowa.edu>
 # Repository: CRAN
-# Date/Publication: 2016-11-19 10:13:47
+# Date/Publication: 2018-02-11 20:58:37 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
