--- a/r-grpreg-feedstock/recipe/meta.yaml
+++ b/r-grpreg-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '3.1-2' %}
+{% set version = '3.1-3' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,27 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: grpreg_3.1-2.tar.gz  # [linux or win32]
+  fn: grpreg_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/grpreg_3.1-2.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/grpreg/grpreg_3.1-2.tar.gz  # [linux or win32]
-  sha256: 38d5f277b8fbbdc3a760277c2372ae993f7bda4f0198338609ccc91110575c10  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/grpreg_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/grpreg/grpreg_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 47cb1b45761dd5c82fd0ee49a21c16046db4da6c1e8e91fc52436dea25ecaf44  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/grpreg_3.1-3.zip  # [win64]
+  sha256: 0743b489b9d1be92f607446bedf45d24e972338fbddde52164462cf04f565f14  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/grpreg_3.1-2.zip  # [win64]
-  sha256: f844d7a3f136dc5b645afdc81fa5e5a90928c89be2dc67a3fcddfe8ce092e520  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/grpreg_3.1-2.tgz  # [osx]
-  sha256: 4ad379ffc9d9eb32b658e0691704219e6d88152a96a1e0860cbb79bd425f70d4  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/grpreg_3.1-3.tgz  # [osx]
+  sha256: c3e63132c285ba03674f6b642ea9cdf6750444ccbd309288d6a41326aa896eca  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -38,10 +33,10 @@ build:
 # Suggests: grpregOverlap, knitr, survival
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}make                # [linux or win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
@@ -49,7 +44,7 @@ requirements:
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
+    - {{native}}gcc-libs         # [win32]
     - r-matrix
 
 test:
@@ -81,8 +76,8 @@ extra:
 
 # Package: grpreg
 # Title: Regularization Paths for Regression Models with Grouped Covariates
-# Version: 3.1-2
-# Date: 2017-07-05
+# Version: 3.1-3
+# Date: 2018-04-07
 # Author: Patrick Breheny [aut, cre], Yaohui Zeng [ctb]
 # Maintainer: Patrick Breheny <patrick-breheny@uiowa.edu>
 # Depends: R (>= 3.1.0), Matrix
@@ -92,9 +87,9 @@ extra:
 # BugReports: http://github.com/pbreheny/grpreg/issues
 # License: GPL-3
 # NeedsCompilation: yes
-# Packaged: 2017-07-05 21:31:51 UTC; pbreheny
+# Packaged: 2018-04-07 12:38:47 UTC; pbreheny
 # Repository: CRAN
-# Date/Publication: 2017-07-06 10:19:31 UTC
+# Date/Publication: 2018-04-08 11:13:01 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
