--- a/r-inline-feedstock/recipe/meta.yaml
+++ b/r-inline-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.3.14' %}
+{% set version = '0.3.15' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,27 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: inline_0.3.14.tar.gz  # [linux or win32]
+  fn: inline_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/inline_0.3.14.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/inline/inline_0.3.14.tar.gz  # [linux or win32]
-  sha256: fd34d6bf965148d26d983a022a0ff7bc1a5831f6ca066deee3f6139894dfc931  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/inline_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/inline/inline_{{ version }}.tar.gz  # [linux or win32]
+  sha256: ff043fe13c1991a3b285bed256ff4a9c0ba10bee764225a34b285875b7d69c68  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/inline_0.3.15.zip  # [win64]
+  sha256: 31f608d6c94d55e365c9282e915d21fa5b3b6b90e86c98e6b571fb72765ac033  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/inline_0.3.14.zip  # [win64]
-  sha256: 3fda5ef16ddb620e7cb46d5cfb0ec52979a76c8a9b8a0804e940d0a3168647bd  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/inline_0.3.14.tgz  # [osx]
-  sha256: 9249aceeb112193b6b1ca2d162e42a533599873fbb0544f1be60fd40a6313b18  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/inline_0.3.15.tgz  # [osx]
+  sha256: 48fe54154d15136eb85c03b6607a6bbd15f247c64aedd57338f5f07c6e3f8280  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -60,8 +55,8 @@ test:
 about:
   home: https://CRAN.R-project.org/package=inline
   license: LGPL
-  summary: Functionality to dynamically define R functions and S4 methods with inlined C, C++
-    or Fortran code supporting .C and .Call calling conventions.
+  summary: Functionality to dynamically define R functions and S4 methods with 'inlined' C, C++
+    or Fortran code supporting the .C and .Call calling conventions.
   license_family: LGPL
 
 extra:
@@ -71,22 +66,23 @@ extra:
 # The original CRAN metadata for this package was:
 
 # Package: inline
-# Version: 0.3.14
-# Date: 2015-04-11
+# Version: 0.3.15
+# Date: 2018-05-18
 # Title: Functions to Inline C, C++, Fortran Function Calls from R
 # Author: Oleg Sklyar, Duncan Murdoch, Mike Smith, Dirk Eddelbuettel,  Romain Francois, Karline Soetaert
 # Maintainer: Dirk Eddelbuettel <edd@debian.org>
-# Depends: R (>= 2.4.0), methods
+# Depends: R (>= 2.4.0)
+# Imports: methods
 # Suggests: Rcpp (>= 0.11.0)
-# Description: Functionality to dynamically define R functions and S4 methods with inlined C, C++ or Fortran code supporting .C and .Call calling conventions.
+# Description: Functionality to dynamically define R functions and S4 methods with 'inlined' C, C++ or Fortran code supporting the .C and .Call calling conventions.
 # License: LGPL
 # Copyright: Oleg Sklyar, 2005-2010 and other authors per their commits
 # LazyLoad: yes
 # BugReports: https://github.com/eddelbuettel/inline/issues
 # NeedsCompilation: no
-# Packaged: 2015-04-12 14:35:08.942414 UTC; edd
+# Packaged: 2018-05-18 11:46:58.172731 UTC; edd
 # Repository: CRAN
-# Date/Publication: 2015-04-13 09:20:41
+# Date/Publication: 2018-05-18 12:40:51 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
