--- a/r-irlba-feedstock/recipe/meta.yaml
+++ b/r-irlba-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '2.3.1' %}
+{% set version = '2.3.2' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,27 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: irlba_2.3.1.tar.gz  # [linux or win32]
+  fn: irlba_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/irlba_2.3.1.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/irlba/irlba_2.3.1.tar.gz  # [linux or win32]
-  sha256: 6082f8b5e32e9541747f0ac7d59f9e5a708b291492e9a21a5e4b9753e7ff94b5  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/irlba_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/irlba/irlba_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 3fdf2d8fefa6ab14cd0992740de7958f9f501c71aca93229f5eb03c54558fc38  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/irlba_2.3.2.zip  # [win64]
+  sha256: e55f9c51fcb158fdb5ff820971ad8c5eb701049ebf3b2d5c986a830cf49da278  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/irlba_2.3.1.zip  # [win64]
-  sha256: ffe99f209e14e4645383ee47baa61cd072b2bef708d2ae094063dd424148d1a9  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/irlba_2.3.1.tgz  # [osx]
-  sha256: ec6cd9e0a37fcdcb357b2531f2186282e2c5e84b9d8adb33e15abacf7bf403a0  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/irlba_2.3.2.tgz  # [osx]
+  sha256: 941f6eaf437871ba9330476e7113065c9035d45160135cdfc27be91bb66cf2a1  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -38,11 +33,10 @@ build:
 # Suggests: PMA
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{ compiler('fortran') }}    # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}make                # [linux or win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
@@ -50,7 +44,7 @@ requirements:
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
+    - {{native}}gcc-libs         # [win32]
     - r-matrix
 
 test:
@@ -81,8 +75,8 @@ extra:
 # Package: irlba
 # Type: Package
 # Title: Fast Truncated Singular Value Decomposition and Principal Components Analysis for Large Dense and Sparse Matrices
-# Version: 2.3.1
-# Date: 2017-10-18
+# Version: 2.3.2
+# Date: 2018-1-9
 # Authors@R: c( person("Jim", "Baglama", rol=c("aut", "cph"), email="jbaglama@uri.edu"), person("Lothar", "Reichel", role=c("aut", "cph"), email="reichel@math.kent.edu"), person("B. W.", "Lewis", role=c("aut","cre","cph"), email="blewis@illposed.net"))
 # Description: Fast and memory efficient methods for truncated singular value decomposition and principal components analysis of large sparse and dense matrices.
 # Depends: Matrix
@@ -93,11 +87,11 @@ extra:
 # BugReports: https://github.com/bwlewis/irlba/issues
 # RoxygenNote: 6.0.1
 # NeedsCompilation: yes
-# Packaged: 2017-10-18 19:45:21 UTC; blewis
+# Packaged: 2018-01-11 14:24:34 UTC; blewis
 # Author: Jim Baglama [aut, cph], Lothar Reichel [aut, cph], B. W. Lewis [aut, cre, cph]
 # Maintainer: B. W. Lewis <blewis@illposed.net>
 # Repository: CRAN
-# Date/Publication: 2017-10-18 20:15:08 UTC
+# Date/Publication: 2018-01-11 15:52:15 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
