--- a/r-maps-feedstock/recipe/meta.yaml
+++ b/r-maps-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '3.2.0' %}
+{% set version = '3.3.0' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,53 +8,48 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: maps_3.2.0.tar.gz  # [linux or win32]
+  fn: maps_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/maps_3.2.0.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/maps/maps_3.2.0.tar.gz  # [linux or win32]
-  sha256: 437abeb4fa4ad4a36af6165d319634b89bfc6bf2b1827ca86c478d56d670e714  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/maps_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/maps/maps_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 199afe19a4edcef966ae79ef802f5dcc15a022f9c357fcb8cae8925fe8bd2216  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/maps_3.3.0.zip  # [win64]
+  sha256: f9554a4a80e161cf303cff53cb4c2d25dc379917cee1efdfe98c39341dfedb0a  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/maps_3.2.0.zip  # [win64]
-  sha256: 7c800965a4115d5610e12a0a3c3880c3f0ebeedbe9f9951d3e3ebc0b3d048612  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/maps_3.2.0.tgz  # [osx]
-  sha256: 5a921e66178d70acb37e1ea0412eaeaa6155289982ddcc0fd103e75e972b47eb  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/maps_3.3.0.tgz  # [osx]
+  sha256: f599fd892b036f9f9264ceb4aa2aeebfcbcd3f9f3040a1da078518d63b7a78e4  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: mapproj (>= 1.2-0), mapdata (>= 2.2-4), sp, maptools
+# Suggests: mapproj (>= 1.2-0), mapdata (>= 2.3.0), sp, maptools, rnaturalearth
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}sed                 # [win32]
-    - {{posix}}grep                # [win32]
-    - {{posix}}autoconf            # [linux or win32]
-    - {{posix}}automake-wrapper    # [win32]
-    - {{posix}}automake            # [win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}sed               # [win32]
+    - {{posix}}grep              # [win32]
+    - {{posix}}autoconf          # [linux or win32]
+    - {{posix}}automake-wrapper  # [win32]
+    - {{posix}}automake          # [win32]
     - {{posix}}pkg-config
-    - {{posix}}make                # [linux or win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
+    - {{native}}gcc-libs         # [win32]
 
 test:
   commands:
@@ -83,20 +78,20 @@ extra:
 
 # Package: maps
 # Title: Draw Geographical Maps
-# Version: 3.2.0
-# Date: 2017-06-07
+# Version: 3.3.0
+# Date: 2018-04-03
 # Author: Original S code by Richard A. Becker and Allan R. Wilks. R version by Ray Brownrigg. Enhancements by Thomas P Minka and Alex Deckmyn.
 # Description: Display of maps.  Projection code and larger maps are in separate packages ('mapproj' and 'mapdata').
-# Depends: R (>= 2.14.0)
+# Depends: R (>= 3.0.0)
 # Imports: graphics, utils
 # LazyData: yes
-# Suggests: mapproj (>= 1.2-0), mapdata (>= 2.2-4), sp, maptools
+# Suggests: mapproj (>= 1.2-0), mapdata (>= 2.3.0), sp, maptools, rnaturalearth
 # License: GPL-2
 # Maintainer: Alex Deckmyn <alex.deckmyn@meteo.be>
 # NeedsCompilation: yes
 # Repository: CRAN
-# Packaged: 2017-06-07 21:50:04 UTC; alex
-# Date/Publication: 2017-06-08 05:00:14 UTC
+# Packaged: 2018-04-03 07:33:40 UTC; dalex
+# Date/Publication: 2018-04-03 08:24:49 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
