--- a/r-pbdzmq-feedstock/recipe/meta.yaml
+++ b/r-pbdzmq-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.2-6' %}
+{% set version = '0.3-3' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,58 +8,48 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: pbdZMQ_0.2-6.tar.gz  # [linux or win32]
+  fn: pbdZMQ_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/pbdZMQ_0.2-6.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/pbdZMQ/pbdZMQ_0.2-6.tar.gz  # [linux or win32]
-  sha256: c1f837b72a65f36d532855c8a524e793f1de1f4e8b9b02271635a9523ca217cf  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/pbdZMQ_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/pbdZMQ/pbdZMQ_{{ version }}.tar.gz  # [linux or win32]
+  sha256: ae26c13400e2acfb6463ff9b67156847a22ec79f3b53baf65119efaba1636eca  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/pbdZMQ_0.3-3.zip  # [win64]
+  sha256: acf0913a6d9e8bf285a9de99fddb699db159806d31bfbc11faf68f3296441de9  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/pbdZMQ_0.2-6.zip  # [win64]
-  sha256: 605dc1d028ccae95af38ec6ca9a12c9258ec5afec9368113c88fa95874d88dae  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/pbdZMQ_0.2-6.tgz  # [osx]
-  sha256: d476d5d507fc550755e706d1c49f3a668ece89aa1ed733e6ae506b29d1e67760  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/pbdZMQ_0.3-3.tgz  # [osx]
+  sha256: 02786528b967e267cc389341dd5d1aabed23031a12a95626be89e2f39cfc2309  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
-  number: 1  # [linux]
-
+  number: 0
 
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: pbdRPC
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{ compiler('cxx') }}        # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}sed                 # [win32]
-    - {{posix}}grep                # [win32]
-    - {{posix}}autoconf            # [linux or win32]
-    - {{posix}}automake-wrapper    # [win32]
-    - {{posix}}automake            # [win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{ compiler('cxx') }}      # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}sed               # [win32]
+    - {{posix}}grep              # [win32]
+    - {{posix}}autoconf          # [linux or win32]
+    - {{posix}}automake-wrapper  # [win32]
+    - {{posix}}automake          # [win32]
     - {{posix}}pkg-config
-    - {{posix}}make                # [linux or win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
-    - r-r6
-    - {{native}}zeromq 4.2.*       # [linux or win32]
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
-    - r-r6
-    - {{native}}zeromq 4.2.*       # [linux or win32]
+    - {{native}}gcc-libs         # [win32]
 
 test:
   commands:
@@ -79,8 +69,8 @@ about:
   summary: '''ZeroMQ'' is a well-known library for high-performance asynchronous messaging in
     scalable, distributed applications.  This package provides high level R wrapper
     functions to easily utilize ''ZeroMQ''. We mainly focus on interactive client/server
-    programming frameworks. For convenience, a minimal ''ZeroMQ'' library (4.1.0 rc1)
-    is shipped with ''pbdZMQ'', which can be used if no system installation of ''ZeroMQ''
+    programming frameworks. For convenience, a minimal ''ZeroMQ'' library (4.2.2) is
+    shipped with ''pbdZMQ'', which can be used if no system installation of ''ZeroMQ''
     is available.  A few wrapper functions compatible with ''rzmq'' are also provided.'
 
   license_family: GPL3
@@ -92,30 +82,27 @@ extra:
 # The original CRAN metadata for this package was:
 
 # Package: pbdZMQ
-# Version: 0.2-6
-# Date: 2017-05-14
-# Title: Programming with Big Data -- Interface to ZeroMQ
-# Authors@R: c(person("Wei-Chen", "Chen", role = c("aut", "cre"), email = "wccsnow@gmail.com"), person("Drew", "Schmidt", role = "aut"), person("Christian", "Heckendorf", role = "aut", comment = "file transfer"), person("George", "Ostrouchov", role = "aut", comment = "Mac OSX"), person("Whit", "Armstrong", role = "ctb", comment = "some functions are modified from the rzmq package for backwards compatibility"), person("Brian", "Ripley", role = "ctb", comment = "C code of shellexec, and Solaris"), person("R Core team", role = "ctb", comment = "some functions are modified from the R source code"), person("Philipp", "A.", role = "ctb", comment = "Fedora"))
+# Version: 0.3-3
+# Date: 2018-04-30
+# Title: Programming with Big Data -- Interface to 'ZeroMQ'
+# Authors@R: c(person("Wei-Chen", "Chen", role = c("aut", "cre"), email = "wccsnow@gmail.com"), person("Drew", "Schmidt", role = "aut"), person("Christian", "Heckendorf", role = "aut", comment = "file transfer"), person("George", "Ostrouchov", role = "aut", comment = "Mac OSX"), person("Whit", "Armstrong", role = "ctb", comment = "some functions are modified from the rzmq package for backwards compatibility"), person("Brian", "Ripley", role = "ctb", comment = "C code of shellexec, and Solaris"), person("R Core team", role = "ctb", comment = "some functions are modified from the R source code"), person("Philipp", "A.", role = "ctb", comment = "Fedora"), person("Elliott Sales", "de Andrade", role = "ctb", comment = "sprintf"), person("Spencer", "Aiello", role = "ctb", comment = "windows conf") )
 # Depends: R (>= 3.2.0)
-# Imports: R6
-# Suggests: pbdRPC
-# Enhances: remoter, pbdMPI
 # LazyLoad: yes
 # LazyData: yes
-# Copyright: See files AUTHORS, COPYING, COPYING.LESSER, and MAINTAINERS in pbdZMQ/inst/zmq_copyright/ for the ZeroMQ source files in src/zmq_src/ which are under GPL-3.
-# Description: 'ZeroMQ' is a well-known library for high-performance asynchronous messaging in scalable, distributed applications.  This package provides high level R wrapper functions to easily utilize 'ZeroMQ'. We mainly focus on interactive client/server programming frameworks. For convenience, a minimal 'ZeroMQ' library (4.1.0 rc1) is shipped with 'pbdZMQ', which can be used if no system installation of 'ZeroMQ' is available.  A few wrapper functions compatible with 'rzmq' are also provided.
-# SystemRequirements: Linux, Mac OSX, and Windows, or ZeroMQ library >= 4.0.4. Solaris 10 needs ZeroMQ library 4.0.7 and OpenCSW.
+# Copyright: See files AUTHORS, COPYING, COPYING.LESSER, and MAINTAINERS in 'pbdZMQ/inst/zmq_copyright/' for the 'ZeroMQ' source files in 'src/zmq_src/' which are under GPL-3.
+# Description: 'ZeroMQ' is a well-known library for high-performance asynchronous messaging in scalable, distributed applications.  This package provides high level R wrapper functions to easily utilize 'ZeroMQ'. We mainly focus on interactive client/server programming frameworks. For convenience, a minimal 'ZeroMQ' library (4.2.2) is shipped with 'pbdZMQ', which can be used if no system installation of 'ZeroMQ' is available.  A few wrapper functions compatible with 'rzmq' are also provided.
+# SystemRequirements: Linux, Mac OSX, and Windows, or 'ZeroMQ' library >= 4.0.4. Solaris 10 needs 'ZeroMQ' library 4.0.7 and 'OpenCSW'.
 # License: GPL-3
 # URL: http://r-pbd.org/
-# BugReports: http://group.r-pbd.org/
+# BugReports: https://github.com/snoweye/pbdZMQ/issues
 # MailingList: Please send questions and comments regarding pbdR to RBigData@gmail.com
 # NeedsCompilation: yes
 # Maintainer: Wei-Chen Chen <wccsnow@gmail.com>
 # RoxygenNote: 6.0.1
-# Packaged: 2017-05-15 04:21:10 UTC; snoweye
-# Author: Wei-Chen Chen [aut, cre], Drew Schmidt [aut], Christian Heckendorf [aut] (file transfer), George Ostrouchov [aut] (Mac OSX), Whit Armstrong [ctb] (some functions are modified from the rzmq package for backwards compatibility), Brian Ripley [ctb] (C code of shellexec, and Solaris), R Core team [ctb] (some functions are modified from the R source code), Philipp A. [ctb] (Fedora)
+# Packaged: 2018-05-01 03:19:59 UTC; snoweye
+# Author: Wei-Chen Chen [aut, cre], Drew Schmidt [aut], Christian Heckendorf [aut] (file transfer), George Ostrouchov [aut] (Mac OSX), Whit Armstrong [ctb] (some functions are modified from the rzmq package for backwards compatibility), Brian Ripley [ctb] (C code of shellexec, and Solaris), R Core team [ctb] (some functions are modified from the R source code), Philipp A. [ctb] (Fedora), Elliott Sales de Andrade [ctb] (sprintf), Spencer Aiello [ctb] (windows conf)
 # Repository: CRAN
-# Date/Publication: 2017-05-15 05:29:06 UTC
+# Date/Publication: 2018-05-05 19:33:08 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
