--- a/r-pillar-feedstock/recipe/meta.yaml
+++ b/r-pillar-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.0.1' %}
+{% set version = '1.2.1' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,50 +8,45 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: pillar_1.0.1.tar.gz  # [linux or win32]
+  fn: pillar_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/pillar_1.0.1.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/pillar/pillar_1.0.1.tar.gz  # [linux or win32]
-  sha256: 7b37189ab9ab0bbf2e6f49e9d5e678acb31500739d3c3ea2b5326b457716277d  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/pillar_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/pillar/pillar_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 6de997a43416f436039f2b8b47c46ea08d2508f8ad341e0e1fd878704a3dcde7  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-04-23/bin/windows/contrib/3.5/pillar_1.2.1.zip  # [win64]
+  sha256: b0d883439f7817142d00b9be600fe9d7bf0df12a169eafdd31a392e52a57a5d1  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/pillar_1.0.1.zip  # [win64]
-  sha256: a729f27d1c98fb9db77d7993c1c1bacf044c7c5eb9de26e33a19c43e426fa77d  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/pillar_1.0.1.tgz  # [osx]
-  sha256: 213edd0769277ddd2c34a57fadc36a9ef2d776abde7a3f3b84a6356fddb1eded  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-04-23/bin/macosx/el-capitan/contrib/3.5/pillar_1.2.1.tgz  # [osx]
+  sha256: 7c11d53efdcffa165ef2ecb596c76aaffc957028f09ac3e2bcac663f4a148b43  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: knitr, testthat
+# Suggests: knitr (>= 1.19), lubridate, testthat (>= 2.0.0)
 requirements:
   build:
 
   host:
     - mro-base
-    - r-cli
+    - r-cli >=1.0.0
     - r-crayon >=1.3.4
-    - r-rlang
-    - r-utf8
+    - r-rlang >=0.2.0
+    - r-utf8 >=1.1.3
 
   run:
     - mro-base
-    - r-cli
+    - r-cli >=1.0.0
     - r-crayon >=1.3.4
-    - r-rlang
-    - r-utf8
+    - r-rlang >=0.2.0
+    - r-utf8 >=1.1.3
 
 test:
   commands:
@@ -66,7 +61,7 @@ test:
     # Put any additional test requirements here.
 
 about:
-  home: https://github.com/hadley/pillar
+  home: https://github.com/r-lib/pillar
   license: GPL-3
   summary: Provides a 'pillar' generic designed for formatting columns of data using the full
     range of colours provided by modern terminals.
@@ -80,24 +75,24 @@ extra:
 
 # Package: pillar
 # Title: Coloured Formatting for Columns
-# Version: 1.0.1
+# Version: 1.2.1
 # Authors@R: c( person("Kirill", "Muller", , "krlmlr+r@mailbox.org", role = c("aut", "cre")), person("Hadley", "Wickham", role = "aut"), person("RStudio", role = "cph") )
 # Description: Provides a 'pillar' generic designed for formatting columns of data using the full range of colours provided by modern terminals.
 # License: GPL-3
 # Encoding: UTF-8
 # LazyData: true
-# URL: https://github.com/hadley/pillar
-# BugReports: https://github.com/hadley/pillar/issues
-# Imports: cli, crayon (>= 1.3.4), methods, rlang, utf8
-# Suggests: knitr, testthat
-# RoxygenNote: 6.0.1
-# Collate: 'compat-purrr.R' 'dim.R' 'extent.R' 'multi.R' 'ornament.R' 'pillar.R' 'rowid-data.R' 'rowid-title.R' 'rowid-type.R' 'scientific.R' 'shaft.R' 'shaft-simple.R' 'sigfig.R' 'spark-bar.R' 'spark-line.R' 'strrep.R' 'styles.R' 'testthat.R' 'tick.R' 'title.R' 'type-sum.R' 'type.R' 'utils.R' 'width.R' 'zzz.R'
+# URL: https://github.com/r-lib/pillar
+# BugReports: https://github.com/r-lib/pillar/issues
+# Imports: cli (>= 1.0.0), crayon (>= 1.3.4), methods, rlang (>= 0.2.0), utf8 (>= 1.1.3)
+# Suggests: knitr (>= 1.19), lubridate, testthat (>= 2.0.0)
+# RoxygenNote: 6.0.1.9000
+# Collate: 'capital.R' 'compat-purrr.R' 'dim.R' 'extent.R' 'multi.R' 'ornament.R' 'pillar-package.R' 'pillar.R' 'rowid-capital.R' 'rowid-data.R' 'rowid-title.R' 'rowid-type.R' 'scientific.R' 'shaft.R' 'shaft-simple.R' 'sigfig.R' 'spark-bar.R' 'spark-line.R' 'strrep.R' 'styles.R' 'testthat.R' 'tick.R' 'title.R' 'type-sum.R' 'type.R' 'utils.R' 'width.R' 'zzz.R'
 # NeedsCompilation: no
-# Packaged: 2017-11-27 10:31:09 UTC; muelleki
+# Packaged: 2018-02-27 05:56:38 UTC; muelleki
 # Author: Kirill Muller [aut, cre], Hadley Wickham [aut], RStudio [cph]
 # Maintainer: Kirill Muller <krlmlr+r@mailbox.org>
 # Repository: CRAN
-# Date/Publication: 2017-11-27 10:34:24 UTC
+# Date/Publication: 2018-02-27 12:42:32 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
