--- a/r-plogr-feedstock/recipe/meta.yaml
+++ b/r-plogr-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.1-1' %}
+{% set version = '0.2.0' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,27 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: plogr_0.1-1.tar.gz  # [linux or win32]
+  fn: plogr_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/plogr_0.1-1.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/plogr/plogr_0.1-1.tar.gz  # [linux or win32]
-  sha256: 22755c93c76c26252841f43195df31681ea865e91aa89726010bd1b9288ef48f  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/plogr_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/plogr/plogr_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 0e63ba2e1f624005fe25c67cdd403636a912e063d682eca07f2f1d65e9870d29  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/plogr_0.2.0.zip  # [win64]
+  sha256: 817db5a62f9871664310ddc3c0b9582a80061074295fa41f390b939faa71f215  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/plogr_0.1-1.zip  # [win64]
-  sha256: d0249b42243dfa01b5daeab9031486d9d55ab1bca320745543769dccff63d512  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/plogr_0.1-1.tgz  # [osx]
-  sha256: ef575b5bcc6ee13f4aa56605109dca6d26e07e853a9a6b6ff7d7b367d1d953bb  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/plogr_0.2.0.tgz  # [osx]
+  sha256: 1af134c3bfee3d724f51bef0a0e6d9e689207b96b7d41116fe649dd3eb6d3ebc  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -73,8 +68,8 @@ extra:
 
 # Package: plogr
 # Title: The 'plog' C++ Logging Library
-# Version: 0.1-1
-# Date: 2016-09-24
+# Version: 0.2.0
+# Date: 2018-03-24
 # Authors@R: c( person("Kirill", "Muller", role = c("aut", "cre"), email = "krlmlr+r@mailbox.org"), person("Sergey", "Podobry", role = "cph", comment = "Author of the bundled plog library"))
 # Description:  A simple header-only logging library for C++. Add 'LinkingTo: plogr' to 'DESCRIPTION', and '#include <plogr.h>' in your C++ modules to use it.
 # Suggests: Rcpp
@@ -83,13 +78,13 @@ extra:
 # LazyData: true
 # URL: https://github.com/krlmlr/plogr#readme
 # BugReports: https://github.com/krlmlr/plogr/issues
-# RoxygenNote: 5.0.1.9000
+# RoxygenNote: 6.0.1.9000
 # NeedsCompilation: no
-# Packaged: 2016-09-24 12:08:49 UTC; muelleki
+# Packaged: 2018-03-24 11:02:06 UTC; muelleki
 # Author: Kirill Muller [aut, cre], Sergey Podobry [cph] (Author of the bundled plog library)
 # Maintainer: Kirill Muller <krlmlr+r@mailbox.org>
 # Repository: CRAN
-# Date/Publication: 2016-09-24 18:23:26
+# Date/Publication: 2018-03-25 15:25:27 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
