--- a/r-rcpp-feedstock/recipe/meta.yaml
+++ b/r-rcpp-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.12.14' %}
+{% set version = '0.12.17' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,27 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: Rcpp_0.12.14.tar.gz  # [linux or win32]
+  fn: Rcpp_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Rcpp_0.12.14.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/Rcpp/Rcpp_0.12.14.tar.gz  # [linux or win32]
-  sha256: da28fcfc3fe7c48d02f9f3e309b56f4be52b14a01216a23e3de8f9d6deeb7e63  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Rcpp_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/Rcpp/Rcpp_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 4227c45c92416b5378ed5761495f9b3932d481bae9a190fb584d17c10744af23  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/Rcpp_0.12.17.zip  # [win64]
+  sha256: 3f2b80a62ac2b72f431ae354443567a4e1ceade1285c392baf95da7d713fbaa3  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/Rcpp_0.12.14.zip  # [win64]
-  sha256: 6dcfc3eb48977e46c7c7e2d088a900e1b38f3146ae64872b51ad99c746b8e648  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/Rcpp_0.12.14.tgz  # [osx]
-  sha256: 6aab6f3da849ed560e33c63637fae8fdb7b6f6af7c72528f0b190c6c10d3aef2  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/Rcpp_0.12.17.tgz  # [osx]
+  sha256: b3303a1d5e2a96088345ff902f19c6f636f0fdd9f2e7adbb8c9aa821673fd95f  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -38,18 +33,18 @@ build:
 # Suggests: RUnit, inline, rbenchmark, knitr, rmarkdown, pinp, pkgKitten (>= 0.1.2)
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{ compiler('cxx') }}        # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}make                # [linux or win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{ compiler('cxx') }}      # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
+    - {{native}}gcc-libs         # [win32]
 
 test:
   commands:
@@ -69,11 +64,11 @@ about:
   summary: The 'Rcpp' package provides R functions as well as C++ classes which offer a seamless
     integration of R and C++. Many R data types and objects can be mapped back and forth
     to C++ equivalents which facilitates both writing of new code as well as easier
-    integration of third-party libraries. Documentation  about 'Rcpp' is provided by
-    several vignettes included in this package, via the  'Rcpp Gallery' site at <http://gallery.rcpp.org>,
-    the paper by Eddelbuettel and  Francois (2011, <doi:10.18637/jss.v040.i08>), the
+    integration of third-party libraries. Documentation about 'Rcpp' is provided by
+    several vignettes included in this package, via the 'Rcpp Gallery' site at <http://gallery.rcpp.org>,
+    the paper by Eddelbuettel and Francois (2011, <doi:10.18637/jss.v040.i08>), the
     book by Eddelbuettel (2013, <doi:10.1007/978-1-4614-6868-4>) and the paper by Eddelbuettel
-    and Balamuta (2017, <doi:10.7287/peerj.preprints.3188v1>); see 'citation("Rcpp")'
+    and Balamuta (2018, <doi:10.1080/00031305.2017.1375990>); see 'citation("Rcpp")'
     for details.
   license_family: GPL3
 
@@ -85,11 +80,11 @@ extra:
 
 # Package: Rcpp
 # Title: Seamless R and C++ Integration
-# Version: 0.12.14
-# Date: 2017-11-17
+# Version: 0.12.17
+# Date: 2018-05-09
 # Author: Dirk Eddelbuettel, Romain Francois, JJ Allaire, Kevin Ushey, Qiang Kou, Nathan Russell, Douglas Bates and John Chambers
 # Maintainer: Dirk Eddelbuettel <edd@debian.org>
-# Description: The 'Rcpp' package provides R functions as well as C++ classes which offer a seamless integration of R and C++. Many R data types and objects can be mapped back and forth to C++ equivalents which facilitates both writing of new code as well as easier integration of third-party libraries. Documentation  about 'Rcpp' is provided by several vignettes included in this package, via the  'Rcpp Gallery' site at <http://gallery.rcpp.org>, the paper by Eddelbuettel and  Francois (2011, <doi:10.18637/jss.v040.i08>), the book by Eddelbuettel (2013, <doi:10.1007/978-1-4614-6868-4>) and the paper by Eddelbuettel and Balamuta (2017, <doi:10.7287/peerj.preprints.3188v1>); see 'citation("Rcpp")' for details.
+# Description: The 'Rcpp' package provides R functions as well as C++ classes which offer a seamless integration of R and C++. Many R data types and objects can be mapped back and forth to C++ equivalents which facilitates both writing of new code as well as easier integration of third-party libraries. Documentation about 'Rcpp' is provided by several vignettes included in this package, via the 'Rcpp Gallery' site at <http://gallery.rcpp.org>, the paper by Eddelbuettel and Francois (2011, <doi:10.18637/jss.v040.i08>), the book by Eddelbuettel (2013, <doi:10.1007/978-1-4614-6868-4>) and the paper by Eddelbuettel and Balamuta (2018, <doi:10.1080/00031305.2017.1375990>); see 'citation("Rcpp")' for details.
 # Depends: R (>= 3.0.0)
 # Imports: methods, utils
 # Suggests: RUnit, inline, rbenchmark, knitr, rmarkdown, pinp, pkgKitten (>= 0.1.2)
@@ -100,9 +95,9 @@ extra:
 # MailingList: Please send questions and comments regarding Rcpp to rcpp-devel@lists.r-forge.r-project.org
 # RoxygenNote: 6.0.1
 # NeedsCompilation: yes
-# Packaged: 2017-11-17 12:51:38.259396 UTC; edd
+# Packaged: 2018-05-09 11:39:30.337102 UTC; edd
 # Repository: CRAN
-# Date/Publication: 2017-11-23 21:24:19 UTC
+# Date/Publication: 2018-05-18 22:17:44 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
