--- a/r-repr-feedstock/recipe/meta.yaml
+++ b/r-repr-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.12.0' %}
+{% set version = '0.15.0' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,42 +8,41 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: repr_0.12.0.tar.gz  # [linux or win32]
+  fn: repr_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/repr_0.12.0.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/repr/repr_0.12.0.tar.gz  # [linux or win32]
-  sha256: 03af0059ecb9b49f3d2c625eceecae7c20b88cd82a066b4d244ec5b27c16cadc  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/repr_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/repr/repr_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 00a2b8ab86bbf04b7f79e64d38ce26fe03e5069699557be27ae0de165343cf57  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/repr_0.15.0.zip  # [win64]
+  sha256: 11415c51a601f93a2794b0f9efc8233251b09b1b876eb3d3fec5bae68bdad0a4  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/repr_0.12.0.zip  # [win64]
-  sha256: e7672e0334b17ebe0c0958acd4cd3906b89eccf6d135972c96f9712733dea406  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/repr_0.12.0.tgz  # [osx]
-  sha256: 65542409ed264b8f6f55b8713adbadd515cfde17dc02545fe12e80a2fd2cc21f  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/repr_0.15.0.tgz  # [osx]
+  sha256: 646dcea6f258ec0b71c38752d610ab727d1046c9a07dbd150c05274773d8c006  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: methods, highr, Cairo, testthat
+# Suggests: methods, highr, Cairo, stringr, testthat
 requirements:
   build:
 
   host:
     - mro-base
+    - r-base64enc
+    - r-htmltools
 
   run:
     - mro-base
+    - r-base64enc
+    - r-htmltools
 
 test:
   commands:
@@ -71,24 +70,24 @@ extra:
 
 # Package: repr
 # Title: Serializable Representations
-# Version: 0.12.0
-# Authors@R: c( person('Philipp', 'Angerer', email = 'phil.angerer@gmail.com', role = c('aut', 'cre')), person('Thomas', 'Kluyver', email = 'thomas@kluyver.me.uk', role = 'aut'), person('Jan', 'Schulz', email = 'jasc@gmx.net', role = 'aut'), person('abielr', role = 'ctb'), person('Denilson', 'Figueiredo de Sa', role = 'ctb'), person('Jim', 'Hester', role = 'ctb'), person('karldw', role = 'ctb') )
+# Version: 0.15.0
+# Authors@R: c( person('Philipp', 'Angerer', email = 'phil.angerer@gmail.com', role = c('aut', 'cre')), person('Thomas', 'Kluyver', email = 'thomas@kluyver.me.uk', role = 'aut'), person('Jan', 'Schulz', email = 'jasc@gmx.net', role = 'aut'), person('abielr', role = 'ctb'), person('Denilson', 'Figueiredo de Sa', role = 'ctb'), person('Jim', 'Hester', role = 'ctb'), person('karldw', role = 'ctb'), person('Carson', 'Sievert', role = 'ctb') )
 # Maintainer: Philipp Angerer <phil.angerer@gmail.com>
 # Description: String and binary representations of objects for several formats / mime types.
 # Depends: R (>= 3.0.1)
-# Imports: utils, grDevices
-# Suggests: methods, highr, Cairo, testthat
+# Imports: utils, grDevices, htmltools, base64enc
+# Suggests: methods, highr, Cairo, stringr, testthat
 # Enhances: data.table, dplyr, htmlwidgets
 # License: GPL-3
 # LazyData: true
 # Encoding: UTF-8
-# Collate: 'generics.r' 'options.r' 'package.r' 'repr_datatable.r' 'utils.r' 'repr_function.r' 'repr_help_files_with_topic.r' 'repr_htmlwidget.r' 'repr_list.r' 'repr_matrix_df.r' 'repr_packageIQR.r' 'repr_recordedplot.r' 'repr_vector.r'
+# Collate: 'generics.r' 'options.r' 'package.r' 'repr_datatable.r' 'utils.r' 'repr_list.r' 'repr_vector.r' 'repr_factor.r' 'repr_function.r' 'repr_help_files_with_topic.r' 'repr_htmlwidget.r' 'repr_matrix_df.r' 'repr_packageIQR.r' 'repr_recordedplot.r'
 # RoxygenNote: 6.0.1.9000
 # NeedsCompilation: no
-# Packaged: 2017-04-07 09:59:00 UTC; angerer
-# Author: Philipp Angerer [aut, cre], Thomas Kluyver [aut], Jan Schulz [aut], abielr [ctb], Denilson Figueiredo de Sa [ctb], Jim Hester [ctb], karldw [ctb]
+# Packaged: 2018-05-18 07:54:03 UTC; phil
+# Author: Philipp Angerer [aut, cre], Thomas Kluyver [aut], Jan Schulz [aut], abielr [ctb], Denilson Figueiredo de Sa [ctb], Jim Hester [ctb], karldw [ctb], Carson Sievert [ctb]
 # Repository: CRAN
-# Date/Publication: 2017-04-07 13:08:00 UTC
+# Date/Publication: 2018-05-18 09:54:20 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
