--- a/r-rjdbc-feedstock/recipe/meta.yaml
+++ b/r-rjdbc-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.2-5' %}
+{% set version = '0.2-7.1' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,33 +8,27 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: RJDBC_0.2-5.tar.gz  # [linux or win32]
+  fn: RJDBC_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/RJDBC_0.2-5.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/RJDBC/RJDBC_0.2-5.tar.gz  # [linux or win32]
-  sha256: 62a9720625f381500c9ef8644878b5c2987637c1ed1684f975b570f2128db831  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/RJDBC_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/RJDBC/RJDBC_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 4540ad34a6dc46b07aee4da39e79872088b72da2f96ce8bad4f0513e879666b4  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/RJDBC_0.2-7.1.zip  # [win64]
+  sha256: 027aba8a09642578d94270ef58101be5a2f0612b8e77f70f438ac3f55f4ebeb4  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/RJDBC_0.2-5.zip  # [win64]
-  sha256: 3e4f5c13b756f95a9a6d14670c5bb4154b4c404b1043468b4f74716c74a4f742  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/RJDBC_0.2-5.tgz  # [osx]
-  sha256: 99d2fe090c7c4f1444036b3b55bf4f7171c454a96a51a8cf76546b90be9d7998  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/RJDBC_0.2-7.1.tgz  # [osx]
+  sha256: ac61b25f70ae2f69b8e5541bdbe9ed0aeeef2458976967b3d031d31b3752fb74  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
-
 
 requirements:
   build:
@@ -50,8 +44,6 @@ requirements:
     - r-rjava >=0.4_15
 
 test:
-  requires:
-    - openjdk
   commands:
     # You can put additional test commands to be run here.
     - $R -e "library('RJDBC')"           # [not win]
@@ -65,10 +57,10 @@ test:
 
 about:
   home: http://www.rforge.net/RJDBC/
-  license: GPL-2
-  summary: RJDBC is an implementation of R's DBI interface using JDBC as a back-end. This allows
-    R to connect to any DBMS that has a JDBC driver.
-  license_family: GPL2
+  license: MIT + file LICENSE
+  summary: The RJDBC package is an implementation of R's DBI interface using JDBC as a back-end.
+    This allows R to connect to any DBMS that has a JDBC driver.
+  license_family: MIT
 
 extra:
   recipe-maintainers:
@@ -77,18 +69,18 @@ extra:
 # The original CRAN metadata for this package was:
 
 # Package: RJDBC
-# Version: 0.2-5
-# Title: Provides access to databases through the JDBC interface
+# Version: 0.2-7.1
+# Title: Provides Access to Databases Through the JDBC Interface
 # Author: Simon Urbanek <Simon.Urbanek@r-project.org>
 # Maintainer: Simon Urbanek <Simon.Urbanek@r-project.org>
 # Depends: methods, DBI, rJava (>= 0.4-15), R (>= 2.4.0)
-# Description: RJDBC is an implementation of R's DBI interface using JDBC as a back-end. This allows R to connect to any DBMS that has a JDBC driver.
-# License: GPL-2
+# Description: The RJDBC package is an implementation of R's DBI interface using JDBC as a back-end. This allows R to connect to any DBMS that has a JDBC driver.
+# License: MIT + file LICENSE
 # URL: http://www.rforge.net/RJDBC/
-# Packaged: 2014-12-18 22:46:08 UTC; svnuser
 # NeedsCompilation: no
+# Packaged: 2018-04-16 13:03:02 UTC; hornik
 # Repository: CRAN
-# Date/Publication: 2014-12-19 07:20:48
+# Date/Publication: 2018-04-16 15:01:33 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
