--- a/r-rprojroot-feedstock/recipe/meta.yaml
+++ b/r-rprojroot-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.3-1' %}
+{% set version = '1.3-2' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,25 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: rprojroot_1.3-1.tar.gz  # [linux or win32 or osx]
-  url:  # [linux or win32 or osx]
-    - {{ cran_mirror }}/src/contrib/rprojroot_1.3-1.tar.gz  # [linux or win32 or osx]
-    - {{ cran_mirror }}/src/contrib/Archive/rprojroot/rprojroot_1.3-1.tar.gz  # [linux or win32 or osx]
-  sha256: 628c2c064b2b288264ecab6e670f9fd1d380b017a546926019fec301a5c82fca  # [linux or win32 or osx]
+  fn: rprojroot_{{ version }}.tar.gz   # [linux or win32]
+  url:  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/rprojroot_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/rprojroot/rprojroot_{{ version }}.tar.gz  # [linux or win32]
+  sha256: df5665834941d8b0e377a8810a04f98552201678300f168de5f58a587b73238b  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/rprojroot_1.3-2.zip  # [win64]
+  sha256: 8070bfd153c7cf81f0bc04a2a08c769d2be0884329aeba3419481ea1de8c83c4  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/rprojroot_1.3-1.zip  # [win64]
-  sha256: f939b417261ddebef467f00bc5b3eb9c940f438fe744174c11b7bc1a805ea7ba  # [win64]
-
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/rprojroot_1.3-2.tgz  # [osx]
+  sha256: 78d23606e94736a596658c968d7e6553a299a01a7c7bf7b0bd2d642463c848dd  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -73,7 +70,7 @@ extra:
 
 # Package: rprojroot
 # Title: Finding Files in Project Subdirectories
-# Version: 1.3-1
+# Version: 1.3-2
 # Authors@R: person(given = "Kirill", family = "Muller", role = c("aut", "cre"), email = "krlmlr+r@mailbox.org")
 # Description: Robust, reliable and flexible paths to files below a project root. The 'root' of a project is defined as a directory that matches a certain criterion, e.g., it contains a certain regular file.
 # Depends: R (>= 3.0.0)
@@ -88,11 +85,11 @@ extra:
 # RoxygenNote: 6.0.1
 # Collate: 'rrmake.R' 'criterion.R' 'file.R' 'has-file.R' 'root.R' 'rprojroot-package.R' 'shortcut.R' 'thisfile.R'
 # NeedsCompilation: no
-# Packaged: 2017-12-18 16:45:58 UTC; muelleki
+# Packaged: 2018-01-03 13:27:15 UTC; muelleki
 # Author: Kirill Muller [aut, cre]
 # Maintainer: Kirill Muller <krlmlr+r@mailbox.org>
 # Repository: CRAN
-# Date/Publication: 2017-12-18 19:09:07 UTC
+# Date/Publication: 2018-01-03 15:36:24 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
