--- a/r-rsconnect-feedstock/recipe/meta.yaml
+++ b/r-rsconnect-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '0.8.5' %}
+{% set version = '0.8.8' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,34 +8,29 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: rsconnect_0.8.5.tar.gz  # [linux or win32]
+  fn: rsconnect_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/rsconnect_0.8.5.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/rsconnect/rsconnect_0.8.5.tar.gz  # [linux or win32]
-  sha256: b8726b2f06c711e5d253ee10ea46e84b8e9438fb7d1d6ac08bcffac099545a78  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/rsconnect_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/rsconnect/rsconnect_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 91825eca63172ed0d36f02a8db9c4e0a44188bb01af8341558398a5715873705  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/rsconnect_0.8.8.zip  # [win64]
+  sha256: cdd4ca27590592fe0c169de30b8f9750e21161d1aaca0402ed02007655fea143  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/rsconnect_0.8.5.zip  # [win64]
-  sha256: bb9301b9fdf3f819045e0ce150efae079f6213439307728e2d4cc33508e9f68a  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/rsconnect_0.8.5.tgz  # [osx]
-  sha256: 46f1dae09409e99b7f5c285ca9c7542a9ec8c73668c9b36d9627480ae804f0af  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/rsconnect_0.8.8.tgz  # [osx]
+  sha256: c87b3d6f274f4c3b34089e5468e696d56a5242a00d0975a3b537a8013698217a  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: scrypt, knitr, testthat, rmarkdown (>= 1.1), plumber (>= 0.3.2)
+# Suggests: knitr, testthat, rmarkdown (>= 1.1), plumber (>= 0.3.2), shiny, sourcetools, xtable
 requirements:
   build:
 
@@ -88,20 +83,20 @@ extra:
 # Package: rsconnect
 # Type: Package
 # Title: Deployment Interface for R Markdown Documents and Shiny Applications
-# Version: 0.8.5
+# Version: 0.8.8
 # Author: JJ Allaire
-# Maintainer: JJ Allaire <jj@rstudio.com>
+# Maintainer: Jonathan McPherson <jonathan@rstudio.com>
 # Description: Programmatic deployment interface for 'RPubs', 'shinyapps.io', and 'RStudio Connect'. Supported content types include R Markdown documents, Shiny applications, Plumber APIs, plots, and static web content.
 # Depends: R (>= 3.0.0)
 # Imports: digest, PKI, RCurl, RJSONIO, packrat (>= 0.4.8-1), yaml (>= 2.1.5), rstudioapi (>= 0.5)
-# Suggests: scrypt, knitr, testthat, rmarkdown (>= 1.1), plumber (>= 0.3.2)
+# Suggests: knitr, testthat, rmarkdown (>= 1.1), plumber (>= 0.3.2), shiny, sourcetools, xtable
 # Enhances: BiocInstaller
 # License: GPL-2
 # RoxygenNote: 6.0.1
 # NeedsCompilation: no
-# Packaged: 2017-08-22 17:27:13 UTC; jmcphers
+# Packaged: 2018-03-07 21:42:46 UTC; jmcphers
 # Repository: CRAN
-# Date/Publication: 2017-08-23 07:21:28 UTC
+# Date/Publication: 2018-03-09 00:26:52 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
