--- a/r-sfsmisc-feedstock/recipe/meta.yaml
+++ b/r-sfsmisc-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.1-1' %}
+{% set version = '1.1-2' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,27 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: sfsmisc_1.1-1.tar.gz  # [linux or win32]
+  fn: sfsmisc_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/sfsmisc_1.1-1.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/sfsmisc/sfsmisc_1.1-1.tar.gz  # [linux or win32]
-  sha256: 0eaab03d3023233f4e869616a5cbc58939f8ac8fa0f94ae1d1dd7d4fb95ff54b  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/sfsmisc_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/sfsmisc/sfsmisc_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 808734644863d102263134634b89dc856dbaadc4d54c32ae697f3e1b0214f831  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/sfsmisc_1.1-2.zip  # [win64]
+  sha256: d28e858ddd3955b34af50925deaca76fc970212e88f731b43eebb905750a8184  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/sfsmisc_1.1-1.zip  # [win64]
-  sha256: b7b8fe09a6c22706a5e1e5af37302dfe9169c766944dac1f0254c87044a4f586  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/sfsmisc_1.1-1.tgz  # [osx]
-  sha256: c9447c032fc373fd7a5326d72f2d14b17389dc19a0f696e0bc10ca6e575a84cd  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/sfsmisc_1.1-2.tgz  # [osx]
+  sha256: cf05e42e0419be8f9d5317129ee7b0d6cd421a1287780fd58d4d1163c137c2a6  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -60,8 +55,14 @@ test:
 about:
   home: https://CRAN.R-project.org/package=sfsmisc
   license: GPL (>= 2)
-  summary: Useful utilities ['goodies'] from Seminar fuer Statistik ETH Zurich, quite a few related
-    to graphics; some were ported from S-plus.
+  summary: Useful utilities ['goodies'] from Seminar fuer Statistik ETH Zurich, some of which
+    were ported from S-plus in the 1990's. For graphics, have pretty (Log-scale) axes,
+    an enhanced Tukey-Anscombe plot, combining histogram and boxplot, 2d-residual plots,
+    a 'tachoPlot()', pretty arrows, etc. For robustness, have a robust F test and robust
+    range(). For system support, notably on Linux, provides 'Sys.*()' functions with
+    more access to system and CPU information. Finally, miscellaneous utilities such
+    as simple efficient prime numbers, integer codes, Duplicated(), toLatex.numeric()
+    and is.whole().
   license_family: GPL3
 
 extra:
@@ -72,12 +73,12 @@ extra:
 
 # Package: sfsmisc
 # Title: Utilities from 'Seminar fuer Statistik' ETH Zurich
-# Version: 1.1-1
-# Date: 2017-06-08
-# Author: Martin Maechler et al.
+# Version: 1.1-2
+# Date: 2018-03-04
+# Authors@R: c(person("Martin","Maechler", role=c("aut","cre"), email="maechler@stat.math.ethz.ch") , person("Werner", "Stahel", role = "ctb", comment = "Functions: compresid2way(), f.robftest(), last(), p.scales(), p.dnorm()") , person("Andreas", "Ruckstuhl", role = "ctb", comment = "Functions: p.arrows(), p.profileTraces(), p.res.2x()") , person("Christian", "Keller", role = "ctb", comment = "Functions: histBxp(), p.tachoPlot()") , person("Kjetil", "Halvorsen", role = "ctb", comment = "Functions: KSd(), ecdf.ksCI()") , person("Alain", "Hauser", role = "ctb", comment = "Functions: cairoSwd(), is.whole(), toLatex.numeric()*") , person("Christoph", "Buser", role = "ctb", comment = "to function Duplicated()") , person("Lorenz", "Gygax", role = "ctb", comment = "to function p.res.2fact()") , person("Bill", "Venables", role = "ctb", comment = "Functions: empty.dimnames(), primes()") , person("Tony", "Plate", role = "ctb", comment = "to inv.seq()") # minor contributors: , person("Isabelle", "Fluckiger", role = "ctb") , person("Marcel", "Wolbers", role = "ctb") , person("Markus", "Keller", role = "ctb") , person("Sandrine", "Dudoit", role = "ctb") , person("Jane", "Fridlyand", role = "ctb") , person("Greg", "Snow", role = "ctb", comment = "to loessDemo()") , person("Henrik Aa.", "Nielsen", role = "ctb", comment = "to loessDemo()") , person("Vincent", "Carey", role = "ctb") , person("Ben", "Bolker", role = "ctb") , person("Philippe", "Grosjean", role = "ctb") , person("Frederic", "Ibanez", role = "ctb") , person("Caterina", "Savi", role = "ctb") , person("Charles", "Geyer", role = "ctb") , person("Jens", "Oehlschlagel", role = "ctb") )
 # Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
-# Description: Useful utilities ['goodies'] from Seminar fuer Statistik ETH Zurich, quite a few related to graphics; some were ported from S-plus.
-# Depends: R (>= 3.0.1)
+# Description: Useful utilities ['goodies'] from Seminar fuer Statistik ETH Zurich, some of which were ported from S-plus in the 1990's. For graphics, have pretty (Log-scale) axes, an enhanced Tukey-Anscombe plot, combining histogram and boxplot, 2d-residual plots, a 'tachoPlot()', pretty arrows, etc. For robustness, have a robust F test and robust range(). For system support, notably on Linux, provides 'Sys.*()' functions with more access to system and CPU information. Finally, miscellaneous utilities such as simple efficient prime numbers, integer codes, Duplicated(), toLatex.numeric() and is.whole().
+# Depends: R (>= 3.2.0)
 # Imports: grDevices, methods, utils, stats
 # Suggests: datasets, tcltk, cluster, lattice, MASS, Matrix, nlme, lokern
 # Enhances: mgcv, rpart, nor1mix, polycor, sm, tikzDevice
@@ -85,9 +86,10 @@ extra:
 # ByteCompile: yes
 # License: GPL (>= 2)
 # NeedsCompilation: no
-# Packaged: 2017-06-08 08:37:43 UTC; maechler
+# Packaged: 2018-03-05 10:04:56 UTC; maechler
+# Author: Martin Maechler [aut, cre], Werner Stahel [ctb] (Functions: compresid2way(), f.robftest(), last(), p.scales(), p.dnorm()), Andreas Ruckstuhl [ctb] (Functions: p.arrows(), p.profileTraces(), p.res.2x()), Christian Keller [ctb] (Functions: histBxp(), p.tachoPlot()), Kjetil Halvorsen [ctb] (Functions: KSd(), ecdf.ksCI()), Alain Hauser [ctb] (Functions: cairoSwd(), is.whole(), toLatex.numeric()*), Christoph Buser [ctb] (to function Duplicated()), Lorenz Gygax [ctb] (to function p.res.2fact()), Bill Venables [ctb] (Functions: empty.dimnames(), primes()), Tony Plate [ctb] (to inv.seq()), Isabelle Fluckiger [ctb], Marcel Wolbers [ctb], Markus Keller [ctb], Sandrine Dudoit [ctb], Jane Fridlyand [ctb], Greg Snow [ctb] (to loessDemo()), Henrik Aa. Nielsen [ctb] (to loessDemo()), Vincent Carey [ctb], Ben Bolker [ctb], Philippe Grosjean [ctb], Frederic Ibanez [ctb], Caterina Savi [ctb], Charles Geyer [ctb], Jens Oehlschlagel [ctb]
 # Repository: CRAN
-# Date/Publication: 2017-06-08 16:46:33 UTC
+# Date/Publication: 2018-03-05 11:38:26 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
