--- a/r-stringi-feedstock/recipe/meta.yaml
+++ b/r-stringi-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.1.6' %}
+{% set version = '1.1.7' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,55 +8,48 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: stringi_1.1.6.tar.gz  # [linux or win32]
+  fn: stringi_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/stringi_1.1.6.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/stringi/stringi_1.1.6.tar.gz  # [linux or win32]
-  sha256: 9590360b96627b18d7bed273deedabda4283dbae7d41c0a0ba78a58e6aa95188  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/stringi_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/stringi/stringi_{{ version }}.tar.gz  # [linux or win32]
+  sha256: b475a8549fbaf8ee0e625a7cead9b3b478cd73864c785582cdb3d217850e9359  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-04-23/bin/windows/contrib/3.5/stringi_1.1.7.zip  # [win64]
+  sha256: 3e38eaab31d86ac3cf21ba7fcb27f3b8a6d4f98d93c849fcad0993234e7c917e  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/stringi_1.1.6.zip  # [win64]
-  sha256: 82bd734440c99540935b36a3f0b8c978b4a3220d8ff25d6b7e8737c9bf4e2315  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/stringi_1.1.6.tgz  # [osx]
-  sha256: 40c5a682176c10ab4576a4bfee67767f506de5e2efc2f20dd191545f11afeb58  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-04-23/bin/macosx/el-capitan/contrib/3.5/stringi_1.1.7.tgz  # [osx]
+  sha256: 964d7e7c5df1dc34c188a6317314133604df49954b5eab614c54d36d728f54ee  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{ compiler('cxx') }}        # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}sed                 # [win32]
-    - {{posix}}grep                # [win32]
-    - {{posix}}autoconf            # [linux or win32]
-    - {{posix}}automake-wrapper    # [win32]
-    - {{posix}}automake            # [win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{ compiler('cxx') }}      # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}sed               # [win32]
+    - {{posix}}grep              # [win32]
+    - {{posix}}autoconf          # [linux or win32]
+    - {{posix}}automake-wrapper  # [win32]
+    - {{posix}}automake          # [win32]
     - {{posix}}pkg-config
-    - {{posix}}make                # [linux or win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
-    - {{native}}icu                # [linux]
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
+    - {{native}}gcc-libs         # [win32]
 
 test:
   commands:
@@ -90,8 +83,8 @@ extra:
 # The original CRAN metadata for this package was:
 
 # Package: stringi
-# Version: 1.1.6
-# Date: 2017-11-10
+# Version: 1.1.7
+# Date: 2018-03-06
 # Title: Character String Processing Facilities
 # Description: Allows for fast, correct, consistent, portable, as well as convenient character string/text processing in every locale and any native encoding. Owing to the use of the ICU library, the package provides R users with platform-independent functions known to Java, Perl, Python, PHP, and Ruby programmers. Available features include: pattern searching (e.g., with ICU Java-like regular expressions or the Unicode Collation Algorithm), random string generation, case mapping, string transliteration, concatenation, Unicode normalization, date-time formatting and parsing, etc.
 # URL: http://www.gagolewski.com/software/stringi/ http://site.icu-project.org/ http://www.unicode.org/
@@ -106,10 +99,10 @@ extra:
 # Maintainer: Marek Gagolewski <gagolews@rexamine.com>
 # RoxygenNote: 6.0.1
 # NeedsCompilation: yes
-# Packaged: 2017-11-10 13:42:04 UTC; gagolews
+# Packaged: 2018-03-06 11:21:46 UTC; gagolews
 # License_is_FOSS: yes
 # Repository: CRAN
-# Date/Publication: 2017-11-17 13:13:14 UTC
+# Date/Publication: 2018-03-12 19:38:49 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
