--- a/r-stringr-feedstock/recipe/meta.yaml
+++ b/r-stringr-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.2.0' %}
+{% set version = '1.3.0' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,46 +8,43 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: stringr_1.2.0.tar.gz  # [linux or win32]
+  fn: stringr_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/stringr_1.2.0.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/stringr/stringr_1.2.0.tar.gz  # [linux or win32]
-  sha256: 61d0b30768bbfd7c0bb89310e2de5b7b457ac504538acbcca50374b46b16129a  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/stringr_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/stringr/stringr_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 23b048d2344cafa10a3480f8d52ab818525c6fdf7210290635f3a10de772bb1d  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-04-23/bin/windows/contrib/3.5/stringr_1.3.0.zip  # [win64]
+  sha256: 7de62b62aa4e57482f3cec07edebe2695353db856a174b6e91e7ececc7ca40df  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/stringr_1.2.0.zip  # [win64]
-  sha256: 40b6b73b49a5d12aa107c34ff7ffc4f7688e7fb9ee9ab9949595b7c5a89fcc25  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/stringr_1.2.0.tgz  # [osx]
-  sha256: c59b0765d03208531aadb7eaa3e1e7a1fc20bdaf364a97f68e59fe0619813b9c  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-04-23/bin/macosx/el-capitan/contrib/3.5/stringr_1.3.0.tgz  # [osx]
+  sha256: dd1c42a9a2461ca920fad3ee37f96e6b08707f1d3ab31533228d02bbf332e27a  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: testthat, knitr, htmltools, htmlwidgets, rmarkdown, covr
+# Suggests: covr, htmltools, htmlwidgets, knitr, rmarkdown, testthat
 requirements:
   build:
 
   host:
     - mro-base
+    - r-glue
     - r-magrittr
-    - r-stringi >=0.4.1
+    - r-stringi >=1.1.6
 
   run:
     - mro-base
+    - r-glue
     - r-magrittr
-    - r-stringi >=0.4.1
+    - r-stringi >=1.1.6
 
 test:
   commands:
@@ -77,25 +74,25 @@ extra:
 # The original CRAN metadata for this package was:
 
 # Package: stringr
-# Version: 1.2.0
 # Title: Simple, Consistent Wrappers for Common String Operations
+# Version: 1.3.0
+# Authors@R: c( person("Hadley", "Wickham", , "hadley@rstudio.com", c("aut", "cre", "cph")), person("RStudio", role = c("cph", "fnd")) )
 # Description: A consistent, simple and easy to use set of wrappers around the fantastic 'stringi' package. All function and argument names (and positions) are consistent, all functions deal with "NA"'s and zero length vectors in the same way, and the output from one function is easy to feed into the input of another.
-# Authors@R: c( person("Hadley", "Wickham", , "hadley@rstudio.com", c("aut", "cre", "cph")), person("RStudio", role = "cph") )
 # License: GPL-2 | file LICENSE
-# Depends: R (>= 2.14)
-# Imports: stringi (>= 0.4.1), magrittr
-# Suggests: testthat, knitr, htmltools, htmlwidgets, rmarkdown, covr
-# VignetteBuilder: knitr
 # URL: http://stringr.tidyverse.org, https://github.com/tidyverse/stringr
 # BugReports: https://github.com/tidyverse/stringr/issues
-# RoxygenNote: 6.0.1
+# Depends: R (>= 3.1)
+# Imports: glue, magrittr, stringi (>= 1.1.6)
+# Suggests: covr, htmltools, htmlwidgets, knitr, rmarkdown, testthat
+# VignetteBuilder: knitr
 # LazyData: true
+# RoxygenNote: 6.0.1
 # NeedsCompilation: no
-# Packaged: 2017-02-17 15:23:03 UTC; hadley
-# Author: Hadley Wickham [aut, cre, cph], RStudio [cph]
+# Packaged: 2018-01-29 22:45:15 UTC; hadley
+# Author: Hadley Wickham [aut, cre, cph], RStudio [cph, fnd]
 # Maintainer: Hadley Wickham <hadley@rstudio.com>
 # Repository: CRAN
-# Date/Publication: 2017-02-18 21:23:06
+# Date/Publication: 2018-02-19 19:47:14 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
