--- a/r-tibble-feedstock/recipe/meta.yaml
+++ b/r-tibble-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.4.1' %}
+{% set version = '1.4.2' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,50 +8,49 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: tibble_1.4.1.tar.gz  # [linux or win32 or osx]
-  url:  # [linux or win32 or osx]
-    - {{ cran_mirror }}/src/contrib/tibble_1.4.1.tar.gz  # [linux or win32 or osx]
-    - {{ cran_mirror }}/src/contrib/Archive/tibble/tibble_1.4.1.tar.gz  # [linux or win32 or osx]
-  sha256: 32267fae1ca86abdd37c4683f9d2b1a47b8b65e1977ea3900aa197066c57aa29  # [linux or win32 or osx]
+  fn: tibble_{{ version }}.tar.gz   # [linux or win32]
+  url:  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/tibble_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/tibble/tibble_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 11670353ff7059a55066dd075d1534d6a27bc5c3583fb9bc291bf750a75c5b17  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-04-23/bin/windows/contrib/3.5/tibble_1.4.2.zip  # [win64]
+  sha256: c18f46798753173f734e5e6fd4b0a32b0f5bdbe443d3c018c4a3644bc03ad2c2  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/tibble_1.4.1.zip  # [win64]
-  sha256: f776e025f85b25804c88cf9d20473b5e796cf988a1cbe6f7574a9efecbfeb6db  # [win64]
-
-
+  url: https://mran.microsoft.com/snapshot/2018-04-23/bin/macosx/el-capitan/contrib/3.5/tibble_1.4.2.tgz  # [osx]
+  sha256: 31bd00ea1f2e314d3821f72fa6b98a2f0e28e47ff3d9e521b8dd9feea0ce4528  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
 
-
   # This is required to make R link correctly on Linux.
   rpaths:
     - lib/R/lib/
     - lib/
 
-# Suggests: covr, dplyr, import, knitr (>= 1.5.32), microbenchmark, mockr, nycflights13, testthat, rmarkdown, withr
+# Suggests: covr, dplyr, import, knitr (>= 1.5.32), microbenchmark, mockr, nycflights13, rmarkdown, testthat, withr
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux or osx]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}make                # [linux or win32 or osx]
+    - {{ compiler('c') }}        # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
+    - r-cli
     - r-crayon
-    - r-pillar
+    - r-pillar >=1.1.0
     - r-rlang
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
+    - {{native}}gcc-libs         # [win32]
+    - r-cli
     - r-crayon
-    - r-pillar
+    - r-pillar >=1.1.0
     - r-rlang
 
 test:
@@ -80,27 +79,27 @@ extra:
 # The original CRAN metadata for this package was:
 
 # Package: tibble
-# Encoding: UTF-8
-# Version: 1.4.1
 # Title: Simple Data Frames
-# Description: Provides a 'tbl_df' class (the 'tibble') that provides stricter checking and better formatting than the traditional data frame.
+# Version: 1.4.2
 # Authors@R: c( person("Kirill", "Muller", , "krlmlr+r@mailbox.org", c("aut", "cre")), person("Hadley", "Wickham", , "hadley@rstudio.com", "aut"), person("Romain", "Francois", , "romain@r-enthusiasts.com", "ctb"), person("RStudio", role = "cph") )
+# Description: Provides a 'tbl_df' class (the 'tibble') that provides stricter checking and better formatting than the traditional data frame.
+# License: MIT + file LICENSE
 # URL: http://tibble.tidyverse.org/, https://github.com/tidyverse/tibble
 # BugReports: https://github.com/tidyverse/tibble/issues
 # Depends: R (>= 3.1.0)
-# Imports: crayon, methods, pillar, rlang, utils
-# Suggests: covr, dplyr, import, knitr (>= 1.5.32), microbenchmark, mockr, nycflights13, testthat, rmarkdown, withr
-# LazyData: yes
-# License: MIT + file LICENSE
-# RoxygenNote: 6.0.1
+# Imports: cli, crayon, methods, pillar (>= 1.1.0), rlang, utils
+# Suggests: covr, dplyr, import, knitr (>= 1.5.32), microbenchmark, mockr, nycflights13, rmarkdown, testthat, withr
 # VignetteBuilder: knitr
-# Collate: 'add.R' 'as_tibble.R' 'check-names.R' 'compat-lazyeval.R' 'compat-purrr.R' 'enframe.R' 'exports.R' 'glimpse.R' 'has-name.R' 'tibble.R' 'lst.R' 'new.R' 'repair-names.R' 'rownames.R' 'strrep.R' 'tbl-df.r' 'tibble-pkg.R' 'tribble.R' 'type-sum.r' 'utils-format.r' 'utils.r' 'wrap.R'
+# Encoding: UTF-8
+# LazyData: yes
+# RoxygenNote: 6.0.1
+# Collate: 'add.R' 'as_tibble.R' 'check-names.R' 'compat-lazyeval.R' 'compat-purrr.R' 'enframe.R' 'exports.R' 'glimpse.R' 'has-name.R' 'tibble.R' 'lst.R' 'new.R' 'repair-names.R' 'rownames.R' 'strrep.R' 'tbl-df.r' 'tibble-package.R' 'tribble.R' 'type-sum.r' 'utils-format.r' 'utils.r' 'wrap.R'
 # NeedsCompilation: yes
-# Packaged: 2017-12-24 15:05:17 UTC; muelleki
+# Packaged: 2018-01-21 23:58:53 UTC; muelleki
 # Author: Kirill Muller [aut, cre], Hadley Wickham [aut], Romain Francois [ctb], RStudio [cph]
 # Maintainer: Kirill Muller <krlmlr+r@mailbox.org>
 # Repository: CRAN
-# Date/Publication: 2017-12-25 23:02:26 UTC
+# Date/Publication: 2018-01-22 19:41:48 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
