--- a/r-xml2-feedstock/recipe/meta.yaml
+++ b/r-xml2-feedstock/recipe/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = '1.1.1' %}
+{% set version = '1.2.0' %}
 
 {% set posix = 'm2-' if win else '' %}
 {% set native = 'm2w64-' if win else '' %}
@@ -8,27 +8,22 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: xml2_1.1.1.tar.gz  # [linux or win32]
+  fn: xml2_{{ version }}.tar.gz   # [linux or win32]
   url:  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/xml2_1.1.1.tar.gz  # [linux or win32]
-    - {{ cran_mirror }}/src/contrib/Archive/xml2/xml2_1.1.1.tar.gz  # [linux or win32]
-  sha256: 00f3e3b66b76760c19da5f6dddc98e6f30de36a96b211e59e1a3f4ff58763116  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/xml2_{{ version }}.tar.gz  # [linux or win32]
+    - {{ cran_mirror }}/src/contrib/Archive/xml2/xml2_{{ version }}.tar.gz  # [linux or win32]
+  sha256: 0a7a916fe9c5da9ac45aeb4c6b6b25d33c07652d422b9f2bb570f2e8f4ac9494  # [linux or win32]
 
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/windows/contrib/3.5/xml2_1.2.0.zip  # [win64]
+  sha256: 8edd028a8244f476205718f381c3279fa643666dc29bc1938d76e62b5dec9317  # [win64]
 
-
-
-  url:  {{ cran_mirror }}/bin/windows/contrib/3.4/xml2_1.1.1.zip  # [win64]
-  sha256: c93378958733e5142fd126ec2933be851ebac3c812d8fa29c171eeed915b44e7  # [win64]
-
-  url:  {{ cran_mirror }}/bin/macosx/el-capitan/contrib/3.4/xml2_1.1.1.tgz  # [osx]
-  sha256: 10b7ec3c9ee068ba33db3fd854a3a5080a9df0263f30751a032d7c662aca5cb3  # [osx]
-
+  url: https://mran.microsoft.com/snapshot/2018-06-01/bin/macosx/el-capitan/contrib/3.5/xml2_1.2.0.tgz  # [osx]
+  sha256: ced391b4a257e327fcd656c63a63a9470b4226e70e0132d5890fdffc36b3e8f4  # [osx]
 
 build:
   merge_build_host: True  # [linux or win32]
   # If this is a new build for the same version, increment the build number.
   number: 0
-
 
   # This is required to make R link correctly on Linux.
   rpaths:
@@ -38,28 +33,25 @@ build:
 # Suggests: testthat, curl, covr, knitr, rmarkdown, magrittr, httr
 requirements:
   build:
-    - {{ compiler('c') }}          # [linux]
-    - {{ compiler('cxx') }}        # [linux]
-    - {{native}}toolchain          # [win32]
-    - {{posix}}filesystem          # [win32]
-    - {{posix}}sed                 # [win32]
-    - {{posix}}grep                # [win32]
-    - {{posix}}autoconf            # [linux or win32]
-    - {{posix}}automake-wrapper    # [win32]
-    - {{posix}}automake            # [win32]
+    - {{ compiler('c') }}        # [linux]
+    - {{ compiler('cxx') }}      # [linux]
+    - {{native}}toolchain        # [win32]
+    - {{posix}}filesystem        # [win32]
+    - {{posix}}sed               # [win32]
+    - {{posix}}grep              # [win32]
+    - {{posix}}autoconf          # [linux or win32]
+    - {{posix}}automake-wrapper  # [win32]
+    - {{posix}}automake          # [win32]
     - {{posix}}pkg-config
-    - {{posix}}make                # [linux or win32]
+    - {{posix}}make              # [linux or win32]
 
   host:
     - mro-base
-    - r-bh
     - r-rcpp
-    - {{posix}}libxml2             # [linux]
 
   run:
     - mro-base
-    - {{native}}gcc-libs           # [win32]
-    - r-bh
+    - {{native}}gcc-libs         # [win32]
     - r-rcpp
 
 test:
@@ -75,7 +67,7 @@ test:
     # Put any additional test requirements here.
 
 about:
-  home: https://github.com/hadley/xml2/
+  home: https://github.com/r-lib/xml2
   license: GPL (>= 2)
   summary: Work with XML files using a simple, consistent interface. Built on top of the 'libxml2'
     C library.
@@ -88,27 +80,27 @@ extra:
 # The original CRAN metadata for this package was:
 
 # Package: xml2
-# Version: 1.1.1
+# Version: 1.2.0
 # Title: Parse XML
 # Description: Work with XML files using a simple, consistent interface. Built on top of the 'libxml2' C library.
 # Authors@R: c( person("Hadley", "Wickham", , "hadley@rstudio.com", "aut"), person("James", "Hester", , "james.hester@rstudio.com", c("aut", "cre")), person("Jeroen", "Ooms", role = "aut"), person("RStudio", role = "cph"), person("R Foundation", role = "ctb", comment = "Copy of R-project homepage cached as example") )
-# URL: https://github.com/hadley/xml2/
-# BugReports: https://github.com/hadley/xml2/issues/
+# URL: https://github.com/r-lib/xml2
+# BugReports: https://github.com/r-lib/xml2/issues
 # Depends: R (>= 3.1.0)
 # Imports: Rcpp
-# LinkingTo: Rcpp (>= 0.11.4.6), BH
+# LinkingTo: Rcpp (>= 0.12.12)
 # Suggests: testthat, curl, covr, knitr, rmarkdown, magrittr, httr
 # SystemRequirements: libxml2: libxml2-dev (deb), libxml2-devel (rpm)
 # License: GPL (>= 2)
-# RoxygenNote: 5.0.1.9000
+# RoxygenNote: 6.0.1
 # VignetteBuilder: knitr
-# Collate: 'RcppExports.R' 'as_list.R' 'xml_parse.R' 'as_xml_document.R' 'classes.R' 'paths.R' 'utils.R' 'xml_attr.R' 'xml_children.R' 'xml_find.R' 'xml_modify.R' 'xml_name.R' 'xml_namespaces.R' 'xml_path.R' 'xml_schema.R' 'xml_serialize.R' 'xml_structure.R' 'xml_text.R' 'xml_type.R' 'xml_url.R' 'xml_write.R' 'zzz.R'
+# Collate: 'RcppExports.R' 'as_list.R' 'xml_parse.R' 'as_xml_document.R' 'classes.R' 'init.R' 'paths.R' 'utils.R' 'xml_attr.R' 'xml_children.R' 'xml_find.R' 'xml_modify.R' 'xml_name.R' 'xml_namespaces.R' 'xml_path.R' 'xml_schema.R' 'xml_serialize.R' 'xml_structure.R' 'xml_text.R' 'xml_type.R' 'xml_url.R' 'xml_write.R' 'zzz.R'
 # NeedsCompilation: yes
-# Packaged: 2017-01-23 18:59:10 UTC; jhester
+# Packaged: 2018-01-23 14:02:37 UTC; jhester
 # Author: Hadley Wickham [aut], James Hester [aut, cre], Jeroen Ooms [aut], RStudio [cph], R Foundation [ctb] (Copy of R-project homepage cached as example)
 # Maintainer: James Hester <james.hester@rstudio.com>
 # Repository: CRAN
-# Date/Publication: 2017-01-24 08:12:30
+# Date/Publication: 2018-01-24 14:50:28 UTC
 
 # See
 # http://docs.continuum.io/conda/build.html for
